package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"net/http"

	"os"
	"os/signal"
	"runtime"
	"strings"
	"syscall"
	"time"

	"user-management-grpc/api/proto"
	"user-management-grpc/internal/auth"
	"user-management-grpc/internal/config"
	"user-management-grpc/internal/database"
	"user-management-grpc/internal/notification"
	"user-management-grpc/internal/scheduler"
	"user-management-grpc/internal/tracing" // ‚¨ÖÔ∏è TH√äM: Import PProf x·ªãn c·ªßa b·∫°n
	"user-management-grpc/internal/user"

	"github.com/gin-gonic/gin"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/metadata"
	"google.golang.org/grpc/status"
)

type contextKey string

const (
	userIDKey   contextKey = "userID"
	userRoleKey contextKey = "userRole"
)

func main() {
	log.Println("üöÄ Starting User Management gRPC Service...")

	cfg, err := config.LoadConfig()
	if err != nil {
		log.Fatalf("‚ùå L·ªói khi load config: %v", err)
	}

	if cfg.AppEnv == "dev" {
		gin.SetMode(gin.DebugMode)
	} else {
		gin.SetMode(gin.ReleaseMode)
	}

	// ‚úÖ Ch·∫°y pprof (Req 9) - ‚¨ÖÔ∏è S·ª¨A: D√πng profiler x·ªãn c·ªßa b·∫°n
	var profiler *tracing.Profiler
	if cfg.AppEnv == "dev" && cfg.Server.PProfPort != "" {
		profiler = tracing.NewProfiler(cfg.Server.PProfPort)
		profiler.Start()                                                          // Ch·∫°y server pprof (b·∫•t ƒë·ªìng b·ªô)
		log.Printf("üìä PProf server ƒëang ch·∫°y t·∫°i port: %s", cfg.Server.PProfPort) // Th√™m log r√µ r√†ng
	}

	// ‚úÖ K·∫øt n·ªëi MySQL (Req 3)
	mysqlDB, err := database.NewMySQL(cfg.Database.MySQLDSN)
	if err != nil {
		log.Fatalf("‚ùå L·ªói k·∫øt n·ªëi v·ªõi MySQL: %v", err)
	}
	defer mysqlDB.Close()
	log.Println("‚úÖ ƒê√£ k·∫øt n·ªëi MySQL")

	// T·∫°o b·∫£ng (ch·ªâ n√™n d√πng cho dev)
	if cfg.AppEnv == "dev" {
		if err := database.CreateUserTable(mysqlDB); err != nil {
			// S·ª≠a l·ªói log ƒë·ªÉ r√µ r√†ng h∆°n
			log.Printf("‚ö†Ô∏è L·ªói t·∫°o b·∫£ng MySQL (c√≥ th·ªÉ ƒë√£ t·ªìn t·∫°i): %v", err)
		}
	}

	// ‚úÖ K·∫øt n·ªëi ScyllaDB (Req 3) - ‚¨ÖÔ∏è S·ª¨A: D√πng logic th·∫≠t
	var scyllaRepo *database.ScyllaRepo // Khai b√°o repo th·∫≠t
	// G·ªçi h√†m NewScylla th·∫≠t t·ª´ database/scylla.go
	scyllaSession, err := database.NewScylla(
		[]string{cfg.Database.ScyllaAddr},
		cfg.Database.ScyllaKeyspace,
	)
	if err != nil {
		log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ k·∫øt n·ªëi ScyllaDB (s·∫Ω ti·∫øp t·ª•c ch·∫°y): %v", err)
		// scyllaRepo s·∫Ω l√† nil,c√°c service c·∫ßn x·ª≠ l√Ω ƒë∆∞·ª£c ƒëi·ªÅu n√†y
	} else {
		scyllaRepo = scyllaSession // G√°n repo th·∫≠t n·∫øu k·∫øt n·ªëi th√†nh c√¥ng
		defer scyllaRepo.Close()   // ƒê·∫£m b·∫£o ƒë√≥ng k·∫øt n·ªëi khi tho√°t
		log.Println("‚úÖ ƒê√£ k·∫øt n·ªëi ScyllaDB")
	}

	// ‚úÖ K·∫øt n·ªëi Redis (Req 3)
	redisDBClient, err := database.NewRedis(
		cfg.Database.RedisAddr,
		cfg.Database.RedisPass,
		cfg.Database.RedisDB,
	)
	if err != nil {
		log.Fatalf("‚ùå L·ªói k·∫øt n·ªëi v·ªõi Redis: %v", err)
	}
	defer database.CloseRedis(redisDBClient)
	log.Println("‚úÖ ƒê√£ k·∫øt n·ªëi Redis")

	// === Kh·ªüi t·∫°o Services ===
	redisAdapter := database.NewRedisAdapter(redisDBClient)
	userRepo := user.NewMySQLRepository(mysqlDB)

	// Service c·∫ßn ki·ªÉm tra nil tr∆∞·ªõc khi d√πng repo
	notificationService := notification.NewService(scyllaRepo)
	defer notificationService.Stop()

	// Wrapper
	notificationClient := NewNotificationClientWrapper(notificationService)

	// User Service
	userService := user.NewService(userRepo, notificationClient)

	// Auth Service
	authService := auth.NewService(
		userRepo,
		redisAdapter,
		cfg.JWT.Secret,
		cfg.JWT.Expiry,
	)

	// === Kh·ªüi t·∫°o gRPC Server (Req 1) ===
	grpcServer := grpc.NewServer(
		grpc.UnaryInterceptor(authInterceptor(authService)),
	)
	proto.RegisterUserServiceServer(grpcServer, userService)
	proto.RegisterAuthServiceServer(grpcServer, authService)
	proto.RegisterNotificationServiceServer(grpcServer, notificationService)

	go func() {
		lis, err := net.Listen("tcp", ":"+cfg.Server.GRPCPort)
		if err != nil {
			log.Fatalf("‚ùå Kh√¥ng th·ªÉ l·∫Øng nghe gRPC: %v", err)
		}
		log.Println("‚úÖ gRPC Server l·∫Øng nghe t·∫°i :" + cfg.Server.GRPCPort)
		if err := grpcServer.Serve(lis); err != nil && err != grpc.ErrServerStopped {
			log.Fatalf("‚ùå gRPC l·ªói: %v", err)
		}
	}()

	// === Kh·ªüi t·∫°o HTTP Server (Req 1) ===
	var httpSrv *http.Server // C·∫ßn tham chi·∫øu ƒë·ªÉ Shutdown
	go func() {
		r := gin.Default()
		httpHandler := NewHTTPHandler(userService, authService)
		setupHTTPRoutes(r, httpHandler, authService)

		log.Println("‚úÖ HTTP Server ch·∫°y t·∫°i :" + cfg.Server.HTTPPort)
		httpSrv = &http.Server{
			Addr:    ":" + cfg.Server.HTTPPort,
			Handler: r,
		}
		if err := httpSrv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
			log.Fatalf("‚ùå HTTP l·ªói: %v", err)
		}
	}()

	// === Kh·ªüi t·∫°o Scheduler (Req 4) ===
	schedulerCtx, schedulerCancel := context.WithCancel(context.Background())
	defer schedulerCancel()

	// ƒê·∫£m b·∫£o interface scheduler.ScyllaRepository v√† database.ScyllaRepo kh·ªõp

	scheduler.StartScheduler(schedulerCtx, userRepo, authService, scyllaRepo)
	log.Println("‚úÖ Scheduler ƒë√£ kh·ªüi ch·∫°y")
	// === Graceful shutdown ===
	// Ch·ªù t√≠n hi·ªáu shutdown v√† g·ªçi h√†m x·ª≠ l√Ω
	waitForShutdown(grpcServer, httpSrv, profiler, schedulerCancel, notificationService)
}

// üéØ NOTIFICATION CLIENT WRAPPER

type NotificationClientWrapper struct{ service *notification.Service }

func NewNotificationClientWrapper(service *notification.Service) *NotificationClientWrapper {
	return &NotificationClientWrapper{service: service}
}
func (w *NotificationClientWrapper) SendWelcomeEmail(ctx context.Context, req *proto.NotificationRequest, opts ...grpc.CallOption) (*proto.NotificationResponse, error) {
	return w.service.SendWelcomeEmail(ctx, req)
}
func (w *NotificationClientWrapper) SendNotification(ctx context.Context, req *proto.NotificationRequest, opts ...grpc.CallOption) (*proto.NotificationResponse, error) {
	return w.service.SendNotification(ctx, req)
}

// üõ°Ô∏è gRPC AUTHENTICATION INTERCEPTOR

func authInterceptor(authService *auth.Service) grpc.UnaryServerInterceptor {
	return func(ctx context.Context, req interface{}, info *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (interface{}, error) {
		publicMethods := map[string]bool{
			"/user.AuthService/Login":                    true,
			"/user.UserService/CreateUser":               true,
			"/user.AuthService/ValidateToken":            true,
			"/user.NotificationService/SendWelcomeEmail": true,
		}
		if publicMethods[info.FullMethod] {
			return handler(ctx, req)
		}
		// Private methods: Extract token
		md, ok := metadata.FromIncomingContext(ctx)
		if !ok {
			return nil, status.Error(codes.Unauthenticated, "metadata kh√¥ng t·ªìn t·∫°i")
		}
		tokens := md.Get("authorization")
		if len(tokens) == 0 {
			return nil, status.Error(codes.Unauthenticated, "authorization header l√† b·∫Øt bu·ªôc")
		}
		tokenString := strings.TrimPrefix(tokens[0], "Bearer ")

		// Validate token
		authResp, err := authService.ValidateToken(ctx, &proto.AuthRequest{Token: tokenString})
		if err != nil || !authResp.Valid {
			return nil, status.Error(codes.Unauthenticated, "token kh√¥ng h·ª£p l·ªá")
		}
		// Get user role
		userRole, err := authService.GetUserRole(ctx, authResp.UserId)
		if err != nil {
			log.Printf("L·ªói khi l·∫•y role cho user %s: %v", authResp.UserId, err)
			return nil, status.Error(codes.Internal, "kh√¥ng th·ªÉ l·∫•y user role")
		}

		// Authorization check for admin methods
		adminMethods := map[string]bool{
			"/user.UserService/DeleteUser":               true,
			"/user.UserService/ListUsers":                true,
			"/user.NotificationService/SendNotification": true,
			// Th√™m c√°c endpoint admin kh√°c n·∫øu c√≥
			"/user.UserService/GetAdminMetrics": true,
			"/user.UserService/BulkCreateUsers": true,
		}
		if adminMethods[info.FullMethod] {
			if userRole != "admin" {
				return nil, status.Error(codes.PermissionDenied, "y√™u c·∫ßu quy·ªÅn admin")
			}
			log.Printf("üëë Admin access granted for user: %s", authResp.UserId)
		}
		ctx = context.WithValue(ctx, userIDKey, authResp.UserId)
		ctx = context.WithValue(ctx, userRoleKey, userRole)
		log.Printf("‚úÖ Auth (gRPC) passed for user: %s, method: %s", authResp.UserId, info.FullMethod)
		return handler(ctx, req)
	}
}

// üõë GRACEFUL SHUTDOWN HANDLER

func waitForShutdown(grpcServer *grpc.Server, httpSrv *http.Server, profiler *tracing.Profiler, schedulerCancel context.CancelFunc, notificationService *notification.Service) {
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	sig := <-quit
	log.Printf("üõë Nh·∫≠n t√≠n hi·ªáu shutdown: %v", sig)
	log.Println("üõë ƒêang t·∫Øt h·ªá th·ªëng...")
	// Th·ª© t·ª± shutdown: PProf -> Scheduler -> Notification -> HTTP -> gRPC
	if profiler != nil {
		log.Println("‚èπÔ∏è 0. ƒêang d·ª´ng PProf server...")
		profiler.Stop()
	}
	log.Println("‚èπÔ∏è 1. ƒêang d·ª´ng scheduler...")
	schedulerCancel()
	if notificationService != nil {
		log.Println("‚èπÔ∏è 2. ƒêang d·ª´ng notification service...")
		notificationService.Stop()
	}
	if httpSrv != nil {
		log.Println("‚èπÔ∏è 3. ƒêang d·ª´ng HTTP server...")
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()
		if err := httpSrv.Shutdown(ctx); err != nil {
			log.Printf("‚ùå L·ªói shutdown HTTP server: %v", err)
		}
	}
	log.Println("‚èπÔ∏è 4. ƒêang d·ª´ng gRPC server (GracefulStop)...")
	grpcServer.GracefulStop()
	log.Println("‚è≥ ƒêang ƒë·ª£i c√°c goroutine ho√†n th√†nh...")
	time.Sleep(1 * time.Second)
	log.Println("‚úÖ H·ªá th·ªëng ƒë√£ t·∫Øt an to√†n")
}

// üåê HTTP HANDLERS (Gin) (Gi·ªØ nguy√™n)

type HTTPHandler struct {
	userService *user.Service
	authService *auth.Service
}

func NewHTTPHandler(u *user.Service, a *auth.Service) *HTTPHandler {
	return &HTTPHandler{userService: u, authService: a}
}
func setupHTTPRoutes(r *gin.Engine, h *HTTPHandler, authService *auth.Service) {
	r.GET("/health", h.healthCheck)
	r.GET("/api/system/info", h.systemInfo)
	apiV1 := r.Group("/api/v1")
	{
		// Public routes
		apiV1.POST("/auth/login", h.login)
		apiV1.POST("/users", h.createUser)
		// Private routes (c·∫ßn auth)
		private := apiV1.Group("")
		private.Use(httpAuthMiddleware(authService))
		{
			users := private.Group("/users")
			{
				// User routes
				users.GET("/me", h.getMe) // L·∫•y th√¥ng tin user ƒëang ƒëƒÉng nh·∫≠p
				users.GET("/:id", h.getUser)
				users.PUT("/:id", h.updateUser)
				users.GET("", adminOnlyMiddleware(), h.listUsers)
				users.DELETE("/:id", adminOnlyMiddleware(), h.deleteUser) // C·∫ßn ki·ªÉm tra quy·ªÅn admin
			}
			// Auth routes (c·∫ßn auth)
			authGroup := private.Group("/auth") // ƒê·ªïi t√™n bi·∫øn ƒë·ªÉ tr√°nh tr√πng
			{
				authGroup.POST("/logout", h.logout)
				authGroup.POST("/refresh", h.refreshToken) // ‚¨ÖÔ∏è TH√äM ROUTE REFRESH
			}
			// Admin routes (c·∫ßn auth + role admin)
			admin := private.Group("/admin")
			admin.Use(adminOnlyMiddleware())
			{
				admin.GET("/metrics", h.getAdminMetrics)
				admin.POST("/users/bulk", h.bulkCreateUsers) // ‚¨ÖÔ∏è TH√äM ROUTE BULK CREATE
			}
		}
	}
}
func (h *HTTPHandler) healthCheck(c *gin.Context) { c.JSON(http.StatusOK, gin.H{"status": "healthy"}) }
func (h *HTTPHandler) systemInfo(c *gin.Context) {
	c.JSON(http.StatusOK, gin.H{"goroutines": runtime.NumGoroutine()})
}
func (h *HTTPHandler) login(c *gin.Context) {
	var req proto.LoginRequest
	if err := c.BindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
		return
	}
	// G·ªçi tr·ª±c ti·∫øp auth service
	resp, err := h.authService.Login(c.Request.Context(), &req)
	if err != nil {
		st, _ := status.FromError(err)
		c.JSON(http.StatusUnauthorized, gin.H{"error": st.Message()})
		return
	}
	c.JSON(http.StatusOK, resp)
}
func (h *HTTPHandler) createUser(c *gin.Context) {
	var req proto.CreateUserRequest
	if err := c.BindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
		return
	}
	// G·ªçi tr·ª±c ti·∫øp user service
	resp, err := h.userService.CreateUser(c.Request.Context(), &req)
	if err != nil {
		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
		return
	}
	c.JSON(http.StatusCreated, resp)
}
func (h *HTTPHandler) getMe(c *gin.Context) {
	authUserID, _ := c.Get(string(userIDKey)) // L·∫•y userID t·ª´ context
	resp, err := h.userService.GetUser(c.Request.Context(), &proto.GetUserRequest{Id: authUserID.(string)})
	if err != nil {
		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
		return
	}
	c.JSON(http.StatusOK, resp)
}
func (h *HTTPHandler) getUser(c *gin.Context) {
	userID := c.Param("id")
	authUserID, _ := c.Get(string(userIDKey))
	authUserRole, _ := c.Get(string(userRoleKey))
	// Cho ph√©p admin xem m·ªçi user, ho·∫∑c user t·ª± xem m√¨nh
	if authUserRole != "admin" && authUserID != userID {
		c.JSON(http.StatusForbidden, gin.H{"error": "Permission denied"})
		return
	}
	resp, err := h.userService.GetUser(c.Request.Context(), &proto.GetUserRequest{Id: userID})
	if err != nil {
		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
		return
	}
	c.JSON(http.StatusOK, resp)
}
func (h *HTTPHandler) updateUser(c *gin.Context) {
	userID := c.Param("id")
	authUserID, _ := c.Get(string(userIDKey))
	// Ch·ªâ cho ph√©p user t·ª± c·∫≠p nh·∫≠t
	if authUserID != userID {
		c.JSON(http.StatusForbidden, gin.H{"error": "Permission denied: you can only update your own profile"})
		return
	}
	var req proto.UpdateUserRequest
	if err := c.BindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
		return
	}
	req.Id = userID // ƒê·∫£m b·∫£o ID t·ª´ URL ƒë∆∞·ª£c d√πng
	resp, err := h.userService.UpdateUser(c.Request.Context(), &req)
	if err != nil {
		st, _ := status.FromError(err)
		if st.Code() == codes.NotFound {
			c.JSON(http.StatusNotFound, gin.H{"error": st.Message()})
		} else {
			c.JSON(http.StatusInternalServerError, gin.H{"error": st.Message()})
		}
		return
	}
	c.JSON(http.StatusOK, resp)
}
func (h *HTTPHandler) listUsers(c *gin.Context) { // ‚¨ÖÔ∏è S·ª¨A: Logic ph√¢n trang n·∫±m trong h√†m
	// Logic ph√¢n trang
	page := c.DefaultQuery("page", "1")
	pageSize := c.DefaultQuery("pageSize", "20")
	var pageInt, pageSizeInt int32
	_, _ = fmt.Sscan(page, &pageInt)
	_, _ = fmt.Sscan(pageSize, &pageSizeInt)
	if pageInt <= 0 {
		pageInt = 1
	}
	if pageSizeInt <= 0 {
		pageSizeInt = 20
	}

	resp, err := h.userService.ListUsers(c.Request.Context(), &proto.ListUsersRequest{Page: pageInt, PageSize: pageSizeInt})
	if err != nil {
		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
		return
	}
	c.JSON(http.StatusOK, resp)
}
func (h *HTTPHandler) deleteUser(c *gin.Context) {
	userID := c.Param("id")
	_, err := h.userService.DeleteUser(c.Request.Context(), &proto.DeleteUserRequest{Id: userID})
	if err != nil {
		st, _ := status.FromError(err)
		if st.Code() == codes.NotFound {
			c.JSON(http.StatusNotFound, gin.H{"error": st.Message()})
		} else {
			c.JSON(http.StatusInternalServerError, gin.H{"error": st.Message()})
		}
		return
	}
	c.JSON(http.StatusOK, gin.H{"message": "User deleted successfully"})
}

// Handler logout HTTP
func (h *HTTPHandler) logout(c *gin.Context) {
	authHeader := c.GetHeader("Authorization")
	tokenString := strings.TrimPrefix(authHeader, "Bearer ")
	if tokenString == authHeader || tokenString == "" {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Valid Bearer token required in Authorization header"})
		return
	}
	_, err := h.authService.Logout(c.Request.Context(), &proto.LogoutRequest{Token: tokenString})
	if err != nil {
		st, _ := status.FromError(err)
		if st.Code() == codes.Unauthenticated {
			log.Printf("‚ÑπÔ∏è HTTP Logout: Token was already invalid or expired")
			c.JSON(http.StatusOK, gin.H{"message": "Logged out (token was invalid/expired)"})
			return
		}
		c.JSON(http.StatusInternalServerError, gin.H{"error": "Logout failed: " + st.Message()})
		return
	}
	c.JSON(http.StatusOK, gin.H{"message": "Logged out successfully"})
}

// Handler admin metrics
func (h *HTTPHandler) getAdminMetrics(c *gin.Context) {
	// Trong th·ª±c t·∫ø, b·∫°n s·∫Ω g·ªçi m·ªôt h√†m trong service ƒë·ªÉ l·∫•y d·ªØ li·ªáu n√†y
	metrics := gin.H{"totalUsers": 1000, "activeUsers": 800, "timestamp": time.Now()}
	c.JSON(http.StatusOK, metrics)
}
func (h *HTTPHandler) refreshToken(c *gin.Context) {
	var req proto.RefreshTokenRequest
	if err := c.BindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
		return
	}
	// G·ªçi tr·ª±c ti·∫øp auth service
	resp, err := h.authService.RefreshToken(c.Request.Context(), &req)
	if err != nil {
		st, _ := status.FromError(err)
		// Tr·∫£ v·ªÅ l·ªói Unauthenticated n·∫øu refresh token kh√¥ng h·ª£p l·ªá
		if st.Code() == codes.Unauthenticated {
			c.JSON(http.StatusUnauthorized, gin.H{"error": st.Message()})
		} else {
			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to refresh token: " + st.Message()})
		}
		return
	}
	c.JSON(http.StatusOK, resp) // Tr·∫£ v·ªÅ LoginResponse (token m·ªõi)
}

// ‚¨ÖÔ∏è TH√äM: Handler bulkCreateUsers (Admin only)
func (h *HTTPHandler) bulkCreateUsers(c *gin.Context) {
	var req proto.BulkCreateRequest
	if err := c.BindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request body: " + err.Error()})
		return
	}
	if len(req.Users) == 0 {
		c.JSON(http.StatusBadRequest, gin.H{"error": "Request must contain at least one user"})
		return
	}
	// G·ªçi tr·ª±c ti·∫øp user service
	resp, err := h.userService.BulkCreateUsers(c.Request.Context(), &req)
	if err != nil {
		// X·ª≠ l√Ω l·ªói t·ª´ service (v√≠ d·ª• l·ªói validation chung, l·ªói DB kh√¥ng mong mu·ªën...)
		// C√≥ th·ªÉ tr·∫£ v·ªÅ InternalServerError ho·∫∑c BadRequest t√πy l·ªói
		st, ok := status.FromError(err)
		if ok && st.Code() == codes.InvalidArgument {
			c.JSON(http.StatusBadRequest, gin.H{"error": "Bulk create failed: " + st.Message()})
		} else {
			c.JSON(http.StatusInternalServerError, gin.H{"error": "Bulk create failed: " + err.Error()})
		}
		return
	}

	// Ki·ªÉm tra xem c√≥ l·ªói t·ª´ng ph·∫ßn kh√¥ng
	if resp.FailureCount > 0 {
		// Tr·∫£ v·ªÅ 207 Multi-Status ƒë·ªÉ b√°o hi·ªáu th√†nh c√¥ng m·ªôt ph·∫ßn
		c.JSON(http.StatusMultiStatus, resp)
	} else {
		// Tr·∫£ v·ªÅ 201 Created n·∫øu t·∫•t c·∫£ th√†nh c√¥ng
		c.JSON(http.StatusCreated, resp)
	}
}

// üõ°Ô∏è HTTP AUTHENTICATION MIDDLEWARE

// Middleware n√†y x√°c th·ª±c token v√† th√™m userID, userRole v√†o context
func httpAuthMiddleware(authService *auth.Service) gin.HandlerFunc {
	return func(c *gin.Context) {
		authHeader := c.GetHeader("Authorization")
		if authHeader == "" {
			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Authorization header is required"})
			return
		}
		tokenString := strings.TrimPrefix(authHeader, "Bearer ")
		if tokenString == authHeader {
			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Invalid token format, must be 'Bearer <token>'"})
			return
		}
		authResp, err := authService.ValidateToken(c.Request.Context(), &proto.AuthRequest{Token: tokenString})
		if err != nil || !authResp.Valid {
			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
			return
		}
		userRole, err := authService.GetUserRole(c.Request.Context(), authResp.UserId)
		if err != nil {
			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve user role"})
			return
		}
		c.Set(string(userIDKey), authResp.UserId)
		c.Set(string(userRoleKey), userRole)
		log.Printf("‚úÖ Auth (HTTP) passed for user: %s", authResp.UserId)
		c.Next()
	}
}

// üëë HTTP ADMIN ONLY MIDDLEWARE

// Middleware n√†y ki·ªÉm tra role "admin" trong context
func adminOnlyMiddleware() gin.HandlerFunc {
	return func(c *gin.Context) {
		roleValue, exists := c.Get(string(userRoleKey))
		if !exists {
			c.AbortWithStatusJSON(http.StatusForbidden, gin.H{"error": "Permission denied: Role not found in context"})
			return
		}
		role, ok := roleValue.(string)
		if !ok || role != "admin" {
			c.AbortWithStatusJSON(http.StatusForbidden, gin.H{"error": "Permission denied: Admin only"})
			return
		}
		c.Next()
	}
}
