// File: internal/auth/service.go
package auth

import (
	"context"
	"fmt"
	"log"
	"strconv"
	"sync"
	"time"

	"user-management-grpc/api/proto"
	"user-management-grpc/internal/user"
	"user-management-grpc/internal/utils"

	"github.com/golang-jwt/jwt/v4"
	"github.com/google/uuid"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
)

// üß± 1. Interface Redis ‚Äî th√™m context cho t·∫•t c·∫£ method
type RedisClient interface {
	Set(ctx context.Context, key, value string, expiration time.Duration) error
	Get(ctx context.Context, key string) (string, error)
	Delete(ctx context.Context, key string) error
	Close() error
	Ping(ctx context.Context) error

	// C√°c h√†m ZSET cho blacklist
	ZAdd(ctx context.Context, key string, socre float64, member string) error
	ZRemRangeByScore(ctx context.Context, key, min, max string) (int64, error)
	ZScore(ctx context.Context, key, member string) (float64, error)
}

// üß© 2. MockRedisClient ‚Äî m√¥ ph·ªèng Redis (d√πng cho dev)
type MockRedisClient struct {
	data map[string]string
	zset map[string]map[string]float64 // Gi·∫£ l·∫≠p ZSET
	mu   sync.RWMutex
}

// NewMockRedisClient - ƒê·ªïi t√™n ƒë·ªÉ r√µ r√†ng h∆°n
func NewMockRedisClient() *MockRedisClient {
	return &MockRedisClient{
		data: make(map[string]string),
		zset: make(map[string]map[string]float64),
	}
}

func (r *MockRedisClient) Set(ctx context.Context, key, value string, expiration time.Duration) error {
	r.mu.Lock()
	defer r.mu.Unlock()
	r.data[key] = value
	log.Printf("üîê Mock Redis: SET %s = %s (expire: %v)", key, value, expiration)
	return nil
}

func (r *MockRedisClient) Get(ctx context.Context, key string) (string, error) {
	r.mu.RLock()
	defer r.mu.RUnlock()
	value, exists := r.data[key]
	if !exists {
		return "", status.Error(codes.NotFound, "key kh√¥ng t·ªìn t·∫°i")
	}
	return value, nil
}

func (r *MockRedisClient) Delete(ctx context.Context, key string) error {
	r.mu.Lock()
	defer r.mu.Unlock()
	delete(r.data, key)
	log.Printf("üîê Mock Redis: DELETE %s", key)
	return nil
}

func (r *MockRedisClient) Close() error {
	return nil
}

func (r *MockRedisClient) Ping(ctx context.Context) error {
	log.Println("‚ù§Ô∏è Mock Redis: PING -> PONG")
	return nil
}
func (r *MockRedisClient) ZAdd(ctx context.Context, key string, score float64, member string) error {
	r.mu.Lock()
	defer r.mu.Unlock()
	if r.zset[key] == nil {
		r.zset[key] = make(map[string]float64)
	}
	r.zset[key][member] = score
	log.Printf("Mock Redis: ZADD %s %f %s", key, score, member)
	return nil
}

func (r *MockRedisClient) ZRemRangeByScore(ctx context.Context, key, min, max string) (int64, error) {
	r.mu.Lock()
	defer r.mu.Unlock()
	minF, _ := strconv.ParseFloat(min, 64)
	maxF, _ := strconv.ParseFloat(max, 64)
	var count int64 = 0
	if r.zset[key] != nil {
		for member, score := range r.zset[key] {
			if score >= minF && score <= maxF {
				delete(r.zset[key], member)
				count++
			}
		}
	}
	log.Printf("Mock Redis: ZREMRANGEBYSCORE %s %s %s (Removed: %d)", key, min, max, count)
	return count, nil
}

func (r *MockRedisClient) ZScore(ctx context.Context, key, member string) (float64, error) {
	r.mu.RLock()
	defer r.mu.RUnlock()
	if r.zset[key] != nil {
		if score, ok := r.zset[key][member]; ok {
			return score, nil
		}
	}
	return 0, fmt.Errorf("redis: nil")
}

// ‚öôÔ∏è 3. Service struct ‚Äî gi·ªØ secret trong bi·∫øn jwtSecret
type Service struct {
	proto.UnimplementedAuthServiceServer
	userRepo     user.Repository
	redisClient  RedisClient
	jwtSecret    string
	tokenExpiry  time.Duration
	activeSessions *utils.SafeMap
	mu           sync.RWMutex
}

func NewService(userRepo user.Repository, redisClient RedisClient, jwtSecret string, tokenExpiry time.Duration) *Service {
	return &Service{
		userRepo:       userRepo,
		redisClient:    redisClient,
		jwtSecret:      jwtSecret,
		tokenExpiry:    tokenExpiry, // L·∫•y t·ª´ cfg.JWT.Expiry
		activeSessions: utils.NewSafeMap(),
	}
}

// üîë 4. Login ‚Äî verify password, generate JWT, cache Redis
func (s *Service) Login(ctx context.Context, req *proto.LoginRequest) (*proto.LoginResponse, error) {
	defer utils.RecoveryWithContext("Login")

	if req.Email == "" || req.Password == "" {
		return nil, status.Error(codes.InvalidArgument, "email v√† password l√† b·∫Øt bu·ªôc")
	}
	// ‚öôÔ∏è Gi·ªõi h·∫°n timeout cho DB query
	ctxDB, cancelDB := context.WithTimeout(ctx, 3*time.Second)
	defer cancelDB()

	userObj, err := s.userRepo.GetByEmail(ctxDB, req.Email)
	if err != nil {
		log.Printf("‚ùå Login failed for email: %s, error: %v", req.Email, err)
		return nil, status.Error(codes.NotFound, "email ho·∫∑c password kh√¥ng ƒë√∫ng")
	}

	// ‚úÖ D√πng utils.VerifyPassword ƒë·ªÉ ki·ªÉm tra m·∫≠t kh·∫©u
	if err := utils.VerifyPassword(userObj.Password, req.Password); err != nil {
		log.Printf("‚ùå Invalid password for user: %s", req.Email)
		return nil, status.Error(codes.Unauthenticated, "email ho·∫∑c password kh√¥ng ƒë√∫ng")
	}

	go func() {
		defer utils.RecoveryWithContext("UpdateLastLogin")
		ctxUpdate, cancelUpdate := context.WithTimeout(context.Background(), 3*time.Second)
		defer cancelUpdate()
		if err := s.userRepo.UpdateLastLogin(ctxUpdate, userObj.ID); err != nil {
			log.Printf("Failed to update last_login_at for user %s: %v", userObj.ID, err)
		}
	}()

	// üîê T·∫°o JWT token
	jti := uuid.New().String()
	token, err := utils.GenerateJWT(userObj.ID, s.jwtSecret, s.tokenExpiry, jti)
	if err != nil {
		return nil, status.Error(codes.Internal, "l·ªói t·∫°o token")
	}

	log.Printf("User %s ƒëƒÉng nh·∫≠p th√†nh c√¥ng. JTI: %s", userObj.ID, jti)
	return &proto.LoginResponse{
		Token: token,
		User: &proto.User{
			Id:       userObj.ID,
			Email:    userObj.Email,
			FullName: userObj.FullName,
			// ‚≠êÔ∏è S·ª¨A: Tr·∫£ v·ªÅ Role khi Login
			Role:     userObj.Role, 
		},
	}, nil
}

// üß© 5. ValidateToken ‚Äî ki·ªÉm tra blacklist
func (s *Service) ValidateToken(ctx context.Context, req *proto.AuthRequest) (*proto.AuthResponse, error) {
	defer utils.RecoveryWithContext("ValidateToken")

	if req.Token == "" {
		return nil, status.Error(codes.InvalidArgument, "token l√† b·∫Øt bu·ªôc")
	}

	claims, err := utils.VerifyJWT(req.Token, s.jwtSecret)
	if err != nil {
		log.Printf("‚ùå Token validation failed (verify): %v", err)
		return &proto.AuthResponse{Valid: false}, nil
	}

	// ‚öôÔ∏è Th√™m timeout khi ki·ªÉm tra blacklist
	ctxR, cancelR := context.WithTimeout(ctx, 2*time.Second)
	defer cancelR()

	_, err = s.redisClient.ZScore(ctxR, "revoked_tokens", claims.ID)
	if err == nil {
		log.Printf("‚ùå Token validation failed: Token is blacklisted (JTI: %s)", claims.ID)
		return &proto.AuthResponse{Valid: false}, nil
	}

	// N·∫øu err != nil (v√≠ d·ª•: "redis: nil"), nghƒ©a l√† KH√îNG T√åM TH·∫§Y key -> token H·ª¢P L·ªÜ
	return &proto.AuthResponse{Valid: true, UserId: claims.UserID}, nil
}

func (s *Service) RefreshToken(ctx context.Context, req *proto.RefreshTokenRequest) (*proto.LoginResponse, error) {
	defer utils.RecoveryWithContext("RefreshToken")

	if req.RefreshToken == "" {
		return nil, status.Error(codes.InvalidArgument, "refresh token l√† b·∫Øt bu·ªôc")
	}

	claims, err := utils.VerifyJWT(req.RefreshToken, s.jwtSecret)
	if err != nil {
		return nil, status.Error(codes.Unauthenticated, "refresh token kh√¥ng h·ª£p l·ªá")
	}

	// ‚≠êÔ∏è S·ª¨A: Khi Refresh, ch√∫ng ta c≈©ng c·∫ßn l·∫•y Role m·ªõi nh·∫•t
	userObj, err := s.userRepo.GetByID(ctx, claims.UserID)
	if err != nil {
		return nil, status.Errorf(codes.Internal, "l·ªói l·∫•y th√¥ng tin user khi refresh: %v", err)
	}

	// Token m·ªõi c≈©ng c·∫ßn JTI m·ªõi
	newJTI := uuid.New().String()
	newToken, err := utils.GenerateJWT(claims.UserID, s.jwtSecret, s.tokenExpiry, newJTI)
	if err != nil {
		return nil, status.Error(codes.Internal, "l·ªói t·∫°o token m·ªõi")
	}

	log.Printf("‚úÖ Token refreshed for user: %s (New JTI: %s)", claims.UserID, newJTI)
	return &proto.LoginResponse{
		Token: newToken,
		User: &proto.User{
			Id:       userObj.ID,
			// ‚≠êÔ∏è S·ª¨A: Tr·∫£ v·ªÅ th√¥ng tin user ƒë·∫ßy ƒë·ªß (bao g·ªìm c·∫£ Role)
			Email:    userObj.Email,
			FullName: userObj.FullName,
			Role:     userObj.Role,
		},
	}, nil
}

// Logout - logic blacklist
func (s *Service) Logout(ctx context.Context, req *proto.LogoutRequest) (*emptypb.Empty, error) {
	defer utils.RecoveryWithContext("Logout")

	if req.Token == "" {
		return nil, status.Error(codes.InvalidArgument, "token l√† b·∫Øt bu·ªôc ƒë·ªÉ logout")
	}

	// X√°c th·ª±c token n√†y L·∫¶N CU·ªêI
	claims, err := utils.VerifyJWT(req.Token, s.jwtSecret)
	if err != nil {
		// K·ªÉ c·∫£ khi token h·∫øt h·∫°n, v·∫´n coi nh∆∞ logout th√†nh c√¥ng
		if err == jwt.ErrTokenExpired {
			log.Printf("‚ÑπÔ∏è Logout v·ªõi token ƒë√£ h·∫øt h·∫°n")
			return &emptypb.Empty{}, nil
		}
		return nil, status.Error(codes.Unauthenticated, "token kh√¥ng h·ª£p l·ªá")
	}
	// L·∫•y th·ªùi gian h·∫øt h·∫°n
	expTime, err := claims.GetExpirationTime()
	if err != nil {
		return nil, status.Error(codes.Internal, "l·ªói l·∫•y th·ªùi gian h·∫øt h·∫°n token")
	}
	expTimestamp := expTime.Unix()
	jti := claims.ID
	if jti == "" {
		return nil, status.Error(codes.Internal, "token kh√¥ng ch·ª©a JTI")
	}
	// Th√™m JTI v√†o ZSET "revoked_tokens" v·ªõi score l√† timestamp h·∫øt h·∫°n
	ctxR, cancelR := context.WithTimeout(ctx, 2*time.Second)
	defer cancelR()
	key := "revoked_tokens"
	score := float64(expTimestamp)

	if err := s.redisClient.ZAdd(ctxR, key, score, jti); err != nil {
		log.Printf("‚ö†Ô∏è L·ªói khi th√™m token v√†o blacklist: %v", err)
		// Kh√¥ng tr·∫£ l·ªói nghi√™m tr·ªçng, ch·ªâ log
	}

	log.Printf("‚úÖ User %s ƒë√£ ƒëƒÉng xu·∫•t (JTI: %s blacklisted)", claims.UserID, jti)
	return &emptypb.Empty{}, nil
}


// Th√™m method GetUserRole
func (s *Service) GetUserRole(ctx context.Context, userID string) (string, error) {
	// D√πng repo ƒë√£ c√≥ ƒë·ªÉ l·∫•y user
	user, err := s.userRepo.GetByID(ctx, userID)
	if err != nil {
		return "", status.Errorf(codes.NotFound, "kh√¥ng t√¨m th·∫•y user %s: %v", userID, err)
	}

	// üîπ X√ìA B·ªé LOGIC HARD-CODE
	// if user.Email == "admin@example.com" { 
	// ¬† ¬† return "admin", nil
	// }
	// return "user", nil
	
	// === LOGIC ƒê√öNG ===
	// Tr·∫£ v·ªÅ Role th·∫≠t s·ª± (v√≠ d·ª•: "admin" ho·∫∑c "user")
	// m√† userRepo ƒë√£ ƒë·ªçc ƒë∆∞·ª£c t·ª´ Redis (ho·∫∑c MySQL)
	if user.Role == "" {
		// An to√†n: N·∫øu Role b·ªã r·ªóng, coi nh∆∞ l√† 'user'
		return "user", nil
	}
	
	return user.Role, nil
}

// Ping - Ki·ªÉm tra s·ª©c kh·ªèe k·∫øt n·ªëi Redis (cho Scheduler)
func (s *Service) Ping(ctx context.Context) error {
	ctx, cancel := context.WithTimeout(ctx, 2*time.Second)
	defer cancel()
	if s.redisClient == nil {
		return fmt.Errorf("redisClient is nil")
	}
	return s.redisClient.Ping(ctx)
}

// H√†m CleanupExpiredTokens (cho Scheduler)
func (s *Service) CleanupExpiredTokens(ctx context.Context) (int64, error) {
	now := time.Now().Unix()
	key := "revoked_tokens"

	// X√≥a t·∫•t c·∫£ JTI trong ZSET c√≥ score (timestamp h·∫øt h·∫°n)
	// nh·ªè h∆°n ho·∫∑c b·∫±ng th·ªùi ƒëi·ªÉm hi·ªán t·∫°i.
	count, err := s.redisClient.ZRemRangeByScore(ctx, key, "0", strconv.FormatInt(now, 10))
	if err != nil {
		log.Printf("‚ùå Failed to cleanup expired tokens from Redis: %v", err)
		return 0, err
	}
	return count, nil
}