package notification

import (
	"context"
	"fmt"
	"log"
	"sync"
	"time"

	"user-management-grpc/api/proto"
	"user-management-grpc/internal/utils"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type ScyllaRepository interface {
	LogUserActivity(userID, activity string) error
	LogNotification(userID, email, notificationType, status string) error
	Ping(ctx context.Context) error
}
type Service struct {
	proto.UnimplementedNotificationServiceServer
	scyllaRepo ScyllaRepository
	emailQueue chan *proto.NotificationRequest
	mu         sync.RWMutex
	workerWg   sync.WaitGroup // üîπ TH√äM: WaitGroup ƒë·ªÉ qu·∫£n l√Ω worker
	stopChan   chan struct{}  // üîπ TH√äM: Channel ƒë·ªÉ d·ª´ng worker
}

func NewService(scyllaRepo ScyllaRepository) *Service {
	service := &Service{
		scyllaRepo: scyllaRepo,
		emailQueue: make(chan *proto.NotificationRequest, 100), // Buffer 100 emails
		stopChan:   make(chan struct{}),
	}

	//  KH·ªûI CH·∫†Y: Worker x·ª≠ l√Ω email b·∫•t ƒë·ªìng b·ªô
	service.workerWg.Add(1)
	go service.emailWorker()
	log.Println("‚úÖ Notification Service ƒë√£ kh·ªüi ƒë·ªông")
	return service
}

func (s *Service) SendWelcomeEmail(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("SendWelcomeEmail")

	if req.UserId == "" || req.Email == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id v√† email l√† b·∫Øt bu·ªôc")
	}

	log.Printf("üìß G·ª≠i welcome email ƒë·∫øn: %s (User: %s)", req.Email, req.UserId)

	// üîπ GHI LOG: Ho·∫°t ƒë·ªông v√†o ScyllaDB
	if s.scyllaRepo != nil {
		err := s.scyllaRepo.LogUserActivity(req.UserId, "welcome_email_sent")
		if err != nil {
			log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ ghi log v√†o Scylla: %v", err)
			// üîπ KH√îNG RETURN ERROR: V√¨ l·ªói log kh√¥ng n√™n ·∫£nh h∆∞·ªüng ƒë·∫øn business logic
		}
	}

	// üîπ GI·∫¢ L·∫¨P: G·ª≠i email th·ª±c t·∫ø
	s.sendEmail(req.Email, "Welcome to Our Service!",
		fmt.Sprintf(`
Dear %s,

Welcome to our platform! We're excited to have you on board.

Here's what you can do:
- Complete your profile
- Explore our features
- Invite your friends

If you have any questions, don't hesitate to contact our support team.

Best regards,
The Team
		`, req.Email))

	log.Printf("‚úÖ ƒê√£ g·ª≠i welcome email th√†nh c√¥ng ƒë·∫øn: %s", req.Email)

	return &proto.NotificationResponse{
		Success: true,
		Message: "Welcome email sent successfully",
	}, nil
}

func (s *Service) SendNotification(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("SendNotification")

	if req.UserId == "" || req.Email == "" || req.Type == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id, email v√† type l√† b·∫Øt bu·ªôc")
	}

	// üîπ QUEUE: ƒê∆∞a notification v√†o queue x·ª≠ l√Ω b·∫•t ƒë·ªìng b·ªô
	select {
	case s.emailQueue <- req:
		log.Printf("üì® ƒê√£ th√™m notification v√†o queue - Type: %s, User: %s", req.Type, req.UserId)
		return &proto.NotificationResponse{
			Success: true,
			Message: "Notification queued successfully",
		}, nil
	case <-ctx.Done():
		return nil, status.Error(codes.DeadlineExceeded, "request timeout")
	default:
		// üîπ QUEUE FULL: Tr·∫£ v·ªÅ l·ªói n·∫øu queue ƒë·∫ßy
		log.Printf("üö® Email queue is full - Type: %s", req.Type)
		return nil, status.Error(codes.ResourceExhausted, "Email queue is full")
	}
}

// =========================================
// üÜï NEW METHODS - HO√ÄN CH·ªàNH
// =========================================

// SendPasswordReset - G·ª≠i email reset password HO√ÄN CH·ªàNH
func (s *Service) SendPasswordReset(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("SendPasswordReset")

	if req.UserId == "" || req.Email == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id v√† email l√† b·∫Øt bu·ªôc")
	}

	log.Printf("üîê G·ª≠i password reset email ƒë·∫øn: %s (User: %s)", req.Email, req.UserId)

	// T·∫°o reset token
	resetToken, err := utils.GenerateRandomString(32)
	if err != nil {
		return nil, status.Error(codes.Internal, "kh√¥ng th·ªÉ t·∫°o reset token")
	}

	// üîπ TRONG TH·ª∞C T·∫æ: L∆∞u reset token v√†o database v·ªõi expiry time
	// ·ªû ƒë√¢y gi·∫£ l·∫≠p l∆∞u v√†o Redis: s.redisClient.Set("pwd_reset:"+resetToken, req.UserId, 1*time.Hour)

	// T·∫°o reset link
	resetLink := fmt.Sprintf("https://yourapp.com/reset-password?token=%s", resetToken)

	// Ghi log v√†o Scylla
	if s.scyllaRepo != nil {
		err := s.scyllaRepo.LogNotification(req.UserId, req.Email, "password_reset", "sent")
		if err != nil {
			log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ ghi log password reset: %v", err)
		}
	}

	// üîπ GI·∫¢ L·∫¨P: G·ª≠i email th·ª±c t·∫ø
	s.sendEmail(req.Email, "Reset Your Password",
		fmt.Sprintf(`
Hello,

You requested a password reset. Click the link below to reset your password:

%s

This link will expire in 1 hour.

If you didn't request this, please ignore this email.

Best regards,
Your App Team
		`, resetLink))

	log.Printf("‚úÖ ƒê√£ g·ª≠i password reset email ƒë·∫øn: %s", req.Email)

	return &proto.NotificationResponse{
		Success: true,
		Message: "Password reset email sent successfully",
	}, nil
}

// SendSecurityAlert - G·ª≠i c·∫£nh b√°o b·∫£o m·∫≠t
func (s *Service) SendSecurityAlert(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("SendSecurityAlert")

	if req.UserId == "" || req.Email == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id v√† email l√† b·∫Øt bu·ªôc")
	}

	log.Printf("üö® G·ª≠i security alert ƒë·∫øn: %s (User: %s)", req.Email, req.UserId)

	// Ghi log v√†o Scylla
	if s.scyllaRepo != nil {
		s.scyllaRepo.LogNotification(req.UserId, req.Email, "security_alert", "sent")
	}

	s.sendEmail(req.Email, "Security Alert - Suspicious Activity", `
SECURITY ALERT

We detected suspicious activity on your account.

If this wasn't you, please secure your account immediately by:
1. Changing your password
2. Reviewing recent activity
3. Contacting support if needed

Best regards,
Security Team
	`)

	log.Printf("‚úÖ ƒê√£ g·ª≠i security alert ƒë·∫øn: %s", req.Email)

	return &proto.NotificationResponse{
		Success: true,
		Message: "Security alert sent successfully",
	}, nil
}

// GetDeliveryStatus - Ki·ªÉm tra tr·∫°ng th√°i g·ª≠i notification
func (s *Service) GetDeliveryStatus(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("GetDeliveryStatus")

	if req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id l√† b·∫Øt bu·ªôc")
	}

	// üîπ TRONG TH·ª∞C T·∫æ: S·∫Ω query database ho·∫∑c email service ƒë·ªÉ l·∫•y status
	// ·ªû ƒë√¢y gi·∫£ l·∫≠p lu√¥n th√†nh c√¥ng
	log.Printf("üìä Ki·ªÉm tra delivery status cho user: %s", req.UserId)

	return &proto.NotificationResponse{
		Success: true,
		Message: "Notification delivered successfully (simulated)",
	}, nil
}

// SendPromotionalEmail - G·ª≠i email qu·∫£ng c√°o/promotional
func (s *Service) SendPromotionalEmail(ctx context.Context, req *proto.NotificationRequest) (*proto.NotificationResponse, error) {
	defer utils.RecoveryWithContext("SendPromotionalEmail")
	if req.UserId == "" || req.Email == "" || req.Message == "" { /* ... l·ªói ... */
	}
	log.Printf("üéâ G·ª≠i promotional email ƒë·∫øn: %s", req.Email)

	// Ki·ªÉm tra nil tr∆∞·ªõc khi d√πng repo
	if s.scyllaRepo != nil {
		err := s.scyllaRepo.LogNotification(req.UserId, req.Email, "promotional", "sent") // ‚úÖ ƒê√£ d√πng interface method
		if err != nil {
			log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ ghi log promotional email: %v", err)
		}
	} else {
		log.Println("‚ö†Ô∏è ScyllaRepo is nil, skipping LogNotification for promotional email")
	}

	s.sendEmail(req.Email, "Special Offer!", req.Message)
	log.Printf("‚úÖ ƒê√£ g·ª≠i promotional email ƒë·∫øn: %s", req.Email)
	return &proto.NotificationResponse{Success: true, Message: "Promotional email sent successfully"}, nil
}

// =========================================
// üõ†Ô∏è PRIVATE HELPER METHODS
// =========================================

// sendEmail - H√†m gi·∫£ l·∫≠p g·ª≠i email (TRONG TH·ª∞C T·∫æ S·∫º T√çCH H·ª¢P EMAIL SERVICE)
func (s *Service) sendEmail(to, subject, body string) error {
	// üîπ TRONG TH·ª∞C T·∫æ: S·∫Ω t√≠ch h·ª£p v·ªõi:
	// - SendGrid: https://github.com/sendgrid/sendgrid-go
	// - AWS SES: https://github.com/aws/aws-sdk-go-v2/service/ses
	// - SMTP: net/smtp

	// Gi·∫£ l·∫≠p ƒë·ªô tr·ªÖ g·ª≠i email
	time.Sleep(100 * time.Millisecond)

	log.Printf("üìß [EMAIL] To: %s, Subject: %s", to, subject)
	log.Printf("üìß [EMAIL BODY] %s", body)

	return nil
}

// =========================================
// üéØ BACKGROUND WORKER PROCESSING (ƒê√É C·∫¨P NH·∫¨T)
// =========================================

// emailWorker - Worker x·ª≠ l√Ω email t·ª´ queue (ch·∫°y background)
func (s *Service) emailWorker() {
	defer s.workerWg.Done()
	defer utils.RecoveryWithContext("EmailWorker")

	log.Println("üë∑ Email worker ƒë√£ kh·ªüi ƒë·ªông")

	for {
		select {
		case req := <-s.emailQueue:
			// üîπ X·ª¨ L√ù: Email t·ª´ queue
			s.processEmail(req)
		case <-s.stopChan:
			// üîπ D·ª™NG: Worker khi nh·∫≠n t√≠n hi·ªáu
			log.Println("üõë Email worker ƒëang d·ª´ng...")
			return
		}
	}
}

// processEmail - X·ª≠ l√Ω email c·ª• th·ªÉ (ƒê√É C·∫¨P NH·∫¨T)
func (s *Service) processEmail(req *proto.NotificationRequest) {
	defer utils.RecoveryWithContext("ProcessEmail")

	startTime := time.Now()
	log.Printf("üë∑ Worker ƒëang x·ª≠ l√Ω email - Type: %s, User: %s", req.Type, req.UserId)

	// üîπ X·ª¨ L√ù THEO LO·∫†I NOTIFICATION
	switch req.Type {
	case "welcome":
		s.sendEmail(req.Email, "Welcome to Our Service!", req.Message)
	case "password_reset":
		s.SendPasswordReset(context.Background(), req) // G·ªçi sync
	case "security_alert":
		s.SendSecurityAlert(context.Background(), req) // G·ªçi sync
	case "promotional":
		s.sendEmail(req.Email, "Special Offer!", req.Message)
	default:
		s.sendEmail(req.Email, "Notification", req.Message)
	}

	// üîπ GHI LOG: K·∫øt qu·∫£ x·ª≠ l√Ω v√†o ScyllaDB
	if s.scyllaRepo != nil {
		err := s.scyllaRepo.LogNotification(req.UserId, req.Email, req.Type, "processed")
		if err != nil {
			log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ ghi notification log: %v", err)
		}
	}

	duration := time.Since(startTime)
	log.Printf("‚úÖ Worker ƒë√£ x·ª≠ l√Ω xong - Type: %s, Time: %v", req.Type, duration)
}

// =========================================
// üõë GRACEFUL SHUTDOWN METHODS
// =========================================

// Stop - D·ª´ng service v√† cleanup
func (s *Service) Stop() {
	log.Println("üõë ƒêang d·ª´ng Notification Service...")

	close(s.stopChan) // üîπ G·ª¨I T√çN HI·ªÜU: D·ª´ng worker
	s.workerWg.Wait() // üîπ ƒê·ª¢I: Worker ho√†n th√†nh

	close(s.emailQueue) // üîπ ƒê√ìNG: Queue

	log.Println("‚úÖ Notification Service ƒë√£ d·ª´ng")
}

// HealthCheck - Ki·ªÉm tra t√¨nh tr·∫°ng service
func (s *Service) HealthCheck(ctx context.Context) (*proto.NotificationResponse, error) {
	// üîπ KI·ªÇM TRA: ScyllaDB connection
	if s.scyllaRepo != nil {
		pingCtx, cancel := context.WithTimeout(ctx, 3*time.Second)
		defer cancel()
		if err := s.scyllaRepo.Ping(pingCtx); err != nil {
			log.Printf("‚ùå Health Check Failed: ScyllaDB Ping error: %v", err)
			return nil, status.Error(codes.Unavailable, "ScyllaDB kh√¥ng k·∫øt n·ªëi")
		}
	}

	// üîπ KI·ªÇM TRA: Queue kh√¥ng b·ªã full
	queueLength := len(s.emailQueue)
	if queueLength > 90 { // 90% capacity
		return nil, status.Error(codes.ResourceExhausted,
			fmt.Sprintf("Email queue g·∫ßn ƒë·∫ßy: %d/100", queueLength))
	}

	return &proto.NotificationResponse{
		Success: true,
		Message: fmt.Sprintf("Notification service is healthy - Queue: %d/100", queueLength),
	}, nil
}

// GetQueueStats - L·∫•y th·ªëng k√™ queue (cho monitoring)
func (s *Service) GetQueueStats(ctx context.Context) (*proto.NotificationResponse, error) {
	queueLength := len(s.emailQueue)
	queueCapacity := cap(s.emailQueue)
	utilization := float64(queueLength) / float64(queueCapacity) * 100

	return &proto.NotificationResponse{
		Success: true,
		Message: fmt.Sprintf("Queue: %d/%d (%.1f%%)", queueLength, queueCapacity, utilization),
	}, nil
}
