package scheduler

import (
	"context"
	"errors"
	"log"
	"runtime" // ğŸ”¹ THÃŠM: Import runtime
	"sync"
	"time"

	"user-management-grpc/internal/auth"
	"user-management-grpc/internal/user"
	"user-management-grpc/internal/utils"

	"github.com/robfig/cron/v3" // ğŸ”¹ Sá»¬A: Import Ä‘Ãºng path
)

// â° SCHEDULER SERVICE - BACKGROUND JOBS

// ScyllaRepository Ä‘á»‹nh nghÄ©a cÃ¡c hÃ nh vi mÃ  scheduler cáº§n tá»« ScyllaDB.
type ScyllaRepository interface {
	LogUserActivity(userID, activity string) error
	Ping(ctx context.Context) error
}

// Scheduler - Quáº£n lÃ½ cÃ¡c cÃ´ng viá»‡c cháº¡y Ä‘á»‹nh ká»³
type Scheduler struct {
	userRepo    user.Repository
	authService *auth.Service
	scyllaRepo  ScyllaRepository
	cron        *cron.Cron // ğŸ”¹ Sá»¬A: cron.Cron thay vÃ¬ cron
	mu          sync.RWMutex
	jobs        map[cron.EntryID]string // ğŸ”¹ THEO DÃ•I: ID vÃ  tÃªn cÃ¡c job
}

// NewScheduler - Khá»Ÿi táº¡o scheduler vá»›i cÃ¡c dependencies
func NewScheduler(userRepo user.Repository, authService *auth.Service, scyllaRepo ScyllaRepository) *Scheduler {
	return &Scheduler{
		userRepo:    userRepo,
		authService: authService,
		scyllaRepo:  scyllaRepo,
		cron:        cron.New(cron.WithChain(cron.Recover(cron.DefaultLogger))),
		jobs:        make(map[cron.EntryID]string),
	}
}

// Start - Khá»Ÿi cháº¡y scheduler vá»›i cÃ¡c job Ä‘á»‹nh ká»³
func (s *Scheduler) Start(ctx context.Context) {
	log.Println("ğŸš€ Starting scheduler...")

	// ğŸ”¹ JOB 1: Cleanup expired tokens má»—i 30 phÃºt
	jobID, err := s.cron.AddFunc("@every 2m", s.cleanupExpiredTokens)
	if err != nil {
		log.Printf("âŒ Failed to add token cleanup job: %v", err)
	} else {
		s.jobs[jobID] = "Token Cleanup"
		log.Println("âœ… Registered job: Token Cleanup (every 30m)")
	}

	// ğŸ”¹ JOB 2: Backup user stats hÃ ng ngÃ y lÃºc 2h sÃ¡ng
	jobID, err = s.cron.AddFunc("@every 2m", s.backupUserStats)
	// "0 2 * * *"
	if err != nil {
		log.Printf("âŒ Failed to add backup job: %v", err)
	} else {
		s.jobs[jobID] = "User Stats Backup"
		log.Println("âœ… Registered job: User Stats Backup (daily at 2:00 AM)")
	}

	// ğŸ”¹ JOB 3: Cleanup inactive users má»—i chá»§ nháº­t lÃºc 3h sÃ¡ng
	jobID, err = s.cron.AddFunc("@every 2m", s.cleanupInactiveUsers)
	// 0 3 * * 0
	if err != nil {
		log.Printf("âŒ Failed to add user cleanup job: %v", err)
	} else {
		s.jobs[jobID] = "Inactive Users Cleanup"
		log.Println("âœ… Registered job: Inactive Users Cleanup (weekly on Sunday at 3:00 AM)")
	}

	// ğŸ”¹ JOB 4: Health check má»—i 5 phÃºt
	jobID, err = s.cron.AddFunc("@every 2m", s.healthCheck)

	// @every 5m
	if err != nil {
		log.Printf("âŒ Failed to add health check job: %v", err)
	} else {
		s.jobs[jobID] = "System Health Check"
		log.Println("âœ… Registered job: System Health Check (every 5m)")
	}

	// ğŸ”¹ JOB 5: Log system stats má»—i giá»
	jobID, err = s.cron.AddFunc("@every 2m", s.logSystemStats)
	// 0 * * * *
	if err != nil {
		log.Printf("âŒ Failed to add system stats job: %v", err)
	} else {
		s.jobs[jobID] = "System Stats Logger"
		log.Println("âœ… Registered job: System Stats Logger (hourly)")
	}

	// ğŸ”¹ KHá»I CHáº Y: Cron scheduler
	s.cron.Start()

	// ğŸ”¹ GRACEFUL SHUTDOWN: Goroutine Ä‘á»ƒ dá»«ng scheduler khi context cancel
	go func() {
		<-ctx.Done()
		log.Println("ğŸ›‘ Stopping scheduler...")
		s.cron.Stop()
		log.Printf("âœ… Scheduler stopped with %d jobs", len(s.jobs))
	}()

	log.Printf("ğŸ¯ Scheduler started successfully with %d jobs", len(s.cron.Entries()))
}

// =========================================
// ğŸ§¹ TOKEN MANAGEMENT JOBS
// =========================================

// cleanupExpiredTokens - Dá»n dáº¹p token háº¿t háº¡n
func (s *Scheduler) cleanupExpiredTokens() {
	defer utils.RecoveryWithContext("CleanupExpiredTokens")
	start := time.Now()
	log.Println("ğŸ§¹ [JOB] Starting expired tokens cleanup...")

	ctx, cancel := context.WithTimeout(context.Background(), 1*time.Minute)
	defer cancel()

	if s.authService != nil {
		// Gá»i method tháº­t (Ä‘Ã£ thÃªm vÃ o auth.Service)
		deletedCount, err := s.authService.CleanupExpiredTokens(ctx)
		if err != nil {
			log.Printf("âŒ [JOB] Token cleanup failed: %v", err)
		} else {
			log.Printf("âœ… [JOB] Token cleanup completed. Removed %d expired revoked tokens.", deletedCount)
		}
	} else {
		log.Println("âš ï¸ Auth service not available for token cleanup")
	}

	duration := time.Since(start)
	log.Printf("âœ… [JOB] Token cleanup finished in %v", duration)
}

// ğŸ’¾ DATA BACKUP & STATISTICS JOBS


// backupUserStats - Backup thá»‘ng kÃª user vÃ o ScyllaDB
func (s *Scheduler) backupUserStats() {

	defer utils.RecoveryWithContext("BackupUserStats")

	start := time.Now()
	log.Println("ğŸ’¾ [JOB] Starting user stats backup...")

	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// ğŸ”¹ Láº¤Y Dá»® LIá»†U: User data tá»« repository
	users, total, err := s.userRepo.List(ctx, 1, 1000) // Láº¥y 1000 user Ä‘áº§u tiÃªn
	if err != nil {
		log.Printf("âŒ [JOB] Failed to get users for backup: %v", err)
		return
	}

	// ğŸ”¹ Xá»¬ LÃ SONG SONG: Sá»­ dá»¥ng goroutine Ä‘á»ƒ tÃ­nh toÃ¡n stats
	var wg sync.WaitGroup
	stats := make(map[string]int)
	var mu sync.Mutex
	// ğŸ”¹ GOROUTINE 1: Thá»‘ng kÃª referral users
	wg.Add(1)
	go func() {
		defer wg.Done()
		defer utils.RecoveryWithContext("ReferralStats")

		referralCount := 0
		for _, user := range users {
			if user.ReferrerID != nil && *user.ReferrerID != "" {
				referralCount++
			}
		}
		mu.Lock()
		stats["referral_users"] = referralCount
		mu.Unlock()
		log.Printf("ğŸ“Š Referral users: %d", referralCount)
	}()

	// ğŸ”¹ GOROUTINE 2: Thá»‘ng kÃª user má»›i trong 7 ngÃ y
	wg.Add(1)
	go func() {
		defer wg.Done()
		defer utils.RecoveryWithContext("RecentUsersStats")

		recentUsers := 0
		weekAgo := time.Now().AddDate(0, 0, -7)
		for _, user := range users {
			if user.CreatedAt.After(weekAgo) {
				recentUsers++
			}
		}
		mu.Lock()
		stats["recent_users"] = recentUsers
		mu.Unlock()
		log.Printf("ğŸ“Š Recent users (7 days): %d", recentUsers)
	}()

	// ğŸ”¹ GOROUTINE 3: Thá»‘ng kÃª active users (giáº£ láº­p)
	wg.Add(1)
	go func() {
		defer wg.Done()
		defer utils.RecoveryWithContext("ActiveUsersStats")

		thirtyDaysAgo := time.Now().AddDate(0, 0, -30)
		log.Println("â³ [JOB-BACKUP] Chuáº©n bá»‹ gá»i GetActiveUsersCount...")

		activeCount, err := s.userRepo.GetActiveUsersCount(ctx, thirtyDaysAgo)
		log.Printf("â„¹ï¸ [JOB-BACKUP] GetActiveUsersCount tráº£ vá»: count=%d, err=%v", activeCount, err)
		if err != nil {
			log.Printf("âŒ [JOB] Failed to get active users count: %v", err)
			return
		}
		log.Println("â³ [JOB-BACKUP][G3] Chuáº©n bá»‹ gá»i mu.Lock()...")
		mu.Lock() // â¬…ï¸ Sá»¬A: KhÃ³a
		log.Println("âœ… [JOB-BACKUP][G3] ÄÃ£ gá»i mu.Lock() thÃ nh cÃ´ng.")
		stats["active_users"] = int(activeCount)
		mu.Unlock() // â¬…ï¸ Sá»¬A: Má»Ÿ khÃ³a
		log.Println("âœ… [JOB-BACKUP][G3] ÄÃ£ gá»i mu.Unlock().")
		log.Printf("ğŸ“Š Active users (30 days): %d", activeCount)
		log.Println("âœ… [JOB-BACKUP][G3] Goroutine 3 hoÃ n thÃ nh.") // Log cuá»‘i cÃ¹ng trÆ°á»›c khi defer wg.Done() cháº¡y

	}()

	wg.Wait()
	// ğŸ”¹ Tá»”NG Há»¢P: Final statistics
	mu.Lock()
	stats["total_users"] = int(total)
	stats["sampled_users"] = len(users)
	stats["backup_timestamp"] = int(time.Now().Unix())
	mu.Unlock()
	// ğŸ”¹ GHI LOG: Backup results vÃ o ScyllaDB
	if s.scyllaRepo != nil {
		err := s.scyllaRepo.LogUserActivity("system_scheduler", "backup_completed")
		if err != nil {
			log.Printf("âš ï¸ [JOB] Failed to log backup to Scylla: %v", err)
		} else {
			log.Println("ğŸ“ Backup logged to ScyllaDB successfully")
		}
	}

	duration := time.Since(start)
	log.Printf("âœ… [JOB] Backup completed: %+v (took %v)", stats, duration)
}

// =========================================
// ğŸ‘¥ USER MANAGEMENT JOBS
// =========================================

// cleanupInactiveUsers - Dá»n dáº¹p users khÃ´ng hoáº¡t Ä‘á»™ng báº±ng logic tháº­t.
func (s *Scheduler) cleanupInactiveUsers() {
	defer utils.RecoveryWithContext("CleanupInactiveUsers")
	start := time.Now()
	log.Println("ğŸ‘¥ [JOB] Starting inactive users cleanup...")
	ctx, cancel := context.WithTimeout(context.Background(), 1*time.Minute)
	defer cancel()

	// Äá»‹nh nghÄ©a "khÃ´ng hoáº¡t Ä‘á»™ng": user Ä‘Æ°á»£c táº¡o cÃ¡ch Ä‘Ã¢y hÆ¡n 30 ngÃ y.
	// Äá»ƒ test, báº¡n cÃ³ thá»ƒ táº¡m thá»i dÃ¹ng 1 phÃºt: time.Now().Add(-1 * time.Minute)
	inactiveThreshold := time.Now().AddDate(0, 0, -30)

	// Gá»i method má»›i cá»§a repository.
	deletedCount, err := s.userRepo.DeleteInactive(ctx, inactiveThreshold)
	if err != nil {
		log.Printf("âŒ [JOB] Inactive user cleanup failed: %v", err)
		if s.scyllaRepo != nil {
			s.scyllaRepo.LogUserActivity("system_scheduler", "cleanup_inactive_users_failed")
		}
		return
	}

	if deletedCount > 0 {
		log.Printf("âœ… [JOB] Successfully deleted %d inactive users.", deletedCount)
		if s.scyllaRepo != nil {
			s.scyllaRepo.LogUserActivity("system_scheduler", "cleanup_inactive_users_success")
		}
	} else {
		log.Println("âœ… [JOB] No inactive users found to delete.")
	}

	log.Printf("âœ… [JOB] Inactive users cleanup completed in %v", time.Since(start))
}

// =========================================
// ğŸ©º SYSTEM HEALTH & MONITORING JOBS
// =========================================

// healthCheck - Kiá»ƒm tra sá»©c khá»e há»‡ thá»‘ng
func (s *Scheduler) healthCheck() {
	defer utils.RecoveryWithContext("HealthCheck")

	log.Println("â¤ï¸ [JOB] Starting system health check...")

	// ğŸ”¹ KIá»‚M TRA SONG SONG: Táº¥t cáº£ services
	var wg sync.WaitGroup
	services := []string{"MySQL", "Redis", "Scylla"}
	results := make(map[string]bool)
	var mu sync.Mutex

	for _, service := range services {
		wg.Add(1)
		go func(svc string) {
			defer wg.Done()
			defer utils.RecoveryWithContext("HealthCheck-" + svc)

			// ğŸ”¹ GIáº¢ Láº¬P: Health check vá»›i timeout
			checkCtx, checkCancel := context.WithTimeout(context.Background(), 5*time.Second)
			defer checkCancel()

			healthy := s.checkServiceHealth(checkCtx, svc)

			mu.Lock()
			results[svc] = healthy
			mu.Unlock()

			if healthy {
				log.Printf("âœ… [HEALTH] %s: HEALTHY", svc)
			} else {
				log.Printf("âŒ [HEALTH] %s: UNHEALTHY", svc)
			}
		}(service)
	}

	wg.Wait()

	// ğŸ”¹ GHI LOG: Health check results
	if s.scyllaRepo != nil {
		status := "healthy"
		for _, healthy := range results {
			if !healthy {
				status = "degraded"
				break
			}
		}
		s.scyllaRepo.LogUserActivity("system_scheduler", "health_check_"+status)
	}

	log.Printf("ğŸ“Š Health check completed: %+v", results)
}

// checkServiceHealth - Kiá»ƒm tra sá»©c khá»e cá»§a tá»«ng service

func (s *Scheduler) checkServiceHealth(ctx context.Context, service string) bool {
	var err error
	switch service {
	case "MySQL":
		if s.userRepo != nil {
			// âš ï¸ YÃŠU Cáº¦U: Cáº§n cÃ³ hÃ m `Ping` trong user.Repository
			err = s.userRepo.Ping(ctx)
		} else {
			err = errors.New("userRepo (MySQL) is nil")
		}
	case "Redis":
		if s.authService != nil {
			err = s.authService.Ping(ctx) // ÄÃ£ thÃªm vÃ o auth.Service
		} else {
			err = errors.New("authService (Redis) is nil")
		}
	case "Scylla":
		if s.scyllaRepo != nil {
			err = s.scyllaRepo.Ping(ctx) // ÄÃ£ thÃªm vÃ o interface ScyllaRepository
		} else {
			err = errors.New("scyllaRepo is nil")
		}
	default:
		return false
	}

	if err != nil {
		log.Printf("âš ï¸ [HEALTH] Ping failed for %s: %v", service, err)
		return false
	}
	return true
}

// logSystemStats - Ghi log thá»‘ng kÃª há»‡ thá»‘ng
func (s *Scheduler) logSystemStats() {
	defer utils.RecoveryWithContext("LogSystemStats")

	stats := map[string]interface{}{
		"timestamp":     time.Now().Format(time.RFC3339),
		"num_goroutine": runtime.NumGoroutine(), // ğŸ”¹ Sá»¬A: ÄÃ£ cÃ³ import runtime
		"active_jobs":   len(s.jobs),
	}

	// ğŸ”¹ THÃŠM: Memory statistics
	var m runtime.MemStats
	runtime.ReadMemStats(&m)
	stats["memory_alloc_mb"] = m.Alloc / 1024 / 1024
	stats["memory_sys_mb"] = m.Sys / 1024 / 1024
	stats["num_gc"] = m.NumGC

	log.Printf("ğŸ“ˆ System Stats: %+v", stats)

	// ğŸ”¹ GHI LOG: System stats vÃ o Scylla
	if s.scyllaRepo != nil {
		s.scyllaRepo.LogUserActivity("system", "system_stats_logged")
	}
}

// =========================================
// ğŸ› ï¸ PUBLIC HELPER FUNCTIONS
// =========================================

// StartScheduler - Helper function Ä‘á»ƒ start scheduler tá»« main.go
func StartScheduler(ctx context.Context, userRepo user.Repository, authService *auth.Service, scyllaRepo ScyllaRepository) {
	scheduler := NewScheduler(userRepo, authService, scyllaRepo)
	scheduler.Start(ctx)
}

// GetJobStatus - Láº¥y tráº¡ng thÃ¡i cÃ¡c job (cho monitoring)
func (s *Scheduler) GetJobStatus() map[string]string {
	s.mu.RLock()
	defer s.mu.RUnlock()

	status := make(map[string]string)
	entries := s.cron.Entries()

	for _, entry := range entries {
		jobName := s.jobs[entry.ID]
		if jobName != "" {
			nextRun := entry.Next.Format("2006-01-02 15:04:05")
			status[jobName] = "Next run: " + nextRun
		}
	}

	return status
}

// Stop - Dá»«ng scheduler
func (s *Scheduler) Stop() {
	log.Println("ğŸ›‘ Stopping scheduler...")
	s.cron.Stop()
	log.Println("âœ… Scheduler stopped")
}
