package user

import (
	"context"
	"database/sql"
	"fmt"
	"log"
	"time"

	"user-management-grpc/internal/utils" // ‚úÖ d√πng utils thay cho bcrypt tr·ª±c ti·∫øp

	"github.com/google/uuid"
)

// C·∫•u tr√∫c Repository
type MySQLRepository struct {
	db *sql.DB
}

// H√†m kh·ªüi t·∫°o
func NewMySQLRepository(db *sql.DB) *MySQLRepository {
	return &MySQLRepository{db: db}
}

// üîπ CREATE USER

func (r *MySQLRepository) Create(ctx context.Context, u *User) error {
	// ‚úÖ T·∫°o context c√≥ timeout ƒë·ªÉ tr√°nh truy v·∫•n treo l√¢u
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	// T·∫°o ID v√† th·ªùi gian n·∫øu ch∆∞a c√≥
	if u.ID == "" {
		u.ID = uuid.New().String()
	}
	if u.CreatedAt.IsZero() {
		u.CreatedAt = time.Now()
	}
	if u.Role == "" {
		u.Role = "user"
	}
	// ‚úÖ D√πng utils.HashPassword thay cho bcrypt tr·ª±c ti·∫øp
	hashedPassword, err := utils.HashPassword(u.Password)
	if err != nil {
		return fmt.Errorf("l·ªói m√£ h√≥a m·∫≠t kh·∫©u: %v", err)
	}

	query := `
		INSERT INTO users (id, email, password, full_name, referrer_id, created_at, role)
		VALUES (?, ?, ?, ?, ?, ?, ?)
	`
	_, err = r.db.ExecContext(ctx, query,
		u.ID,
		u.Email,
		hashedPassword,
		u.FullName,
		u.ReferrerID,
		u.CreatedAt,
		u.Role,
	)
	if err != nil {
		return fmt.Errorf("l·ªói khi t·∫°o user: %v", err)
	}

	log.Printf("‚úÖ ƒê√£ t·∫°o user: %s", u.Email)
	return nil
}

// üîπ GET USER BY ID

func (r *MySQLRepository) GetByID(ctx context.Context, id string) (*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	query := `
		SELECT id, email, password, full_name, referrer_id, created_at, role
		FROM users WHERE id = ?
	`

	var user User
	var referrerID sql.NullString
	err := r.db.QueryRowContext(ctx, query, id).Scan(
		&user.ID,
		&user.Email,
		&user.Password,
		&user.FullName,
		&referrerID,
		&user.CreatedAt,
		&user.Role,
	)
	if err == sql.ErrNoRows {
		return nil, fmt.Errorf("user kh√¥ng t·ªìn t·∫°i: %s", id)
	}
	if err != nil {
		return nil, fmt.Errorf("l·ªói truy v·∫•n user: %v", err)
	}
	if referrerID.Valid {
		user.ReferrerID = &referrerID.String
	}

	return &user, nil
}

// üîπ GET USER BY EMAIL

func (r *MySQLRepository) GetByEmail(ctx context.Context, email string) (*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	query := `
		SELECT id, email, password, full_name, referrer_id, created_at, role
		FROM users WHERE email = ?
	`

	var user User
	var referrerID sql.NullString
	err := r.db.QueryRowContext(ctx, query, email).Scan(
		&user.ID,
		&user.Email,
		&user.Password,
		&user.FullName,
		&referrerID,
		&user.CreatedAt,
		&user.Role,
	)
	if err == sql.ErrNoRows {
		return nil, fmt.Errorf("user kh√¥ng t·ªìn t·∫°i: %s", email)
	}
	if err != nil {
		return nil, fmt.Errorf("l·ªói truy v·∫•n user: %v", err)
	}
	if referrerID.Valid {
		user.ReferrerID = &referrerID.String
	}

	return &user, nil
}

// üîπ UPDATE USER

func (r *MySQLRepository) Update(ctx context.Context, u *User) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	query := `
		UPDATE users
		SET full_name = ?, role = ?
		WHERE id = ?
	`
	result, err := r.db.ExecContext(ctx, query, u.Email, u.FullName, u.ID)
	if err != nil {
		return fmt.Errorf("l·ªói c·∫≠p nh·∫≠t user: %v", err)
	}

	rows, err := result.RowsAffected()
	if err != nil {
		return fmt.Errorf("l·ªói ki·ªÉm tra k·∫øt qu·∫£ update: %v", err)
	}
	if rows == 0 {
		return fmt.Errorf("user kh√¥ng t·ªìn t·∫°i: %s", u.ID)
	}

	log.Printf("‚úÖ ƒê√£ c·∫≠p nh·∫≠t user: %s", u.ID)
	return nil
}

// üîπ DELETE USER

func (r *MySQLRepository) Delete(ctx context.Context, id string) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	query := `DELETE FROM users WHERE id = ?`
	result, err := r.db.ExecContext(ctx, query, id)
	if err != nil {
		return fmt.Errorf("l·ªói x√≥a user: %v", err)
	}

	rows, err := result.RowsAffected()
	if err != nil {
		return fmt.Errorf("l·ªói ki·ªÉm tra k·∫øt qu·∫£ delete: %v", err)
	}
	if rows == 0 {
		return fmt.Errorf("user kh√¥ng t·ªìn t·∫°i: %s", id)
	}

	log.Printf("‚úÖ ƒê√£ x√≥a user: %s", id)
	return nil
}

// üîπ LIST USERS (ph√¢n trang)

func (r *MySQLRepository) List(ctx context.Context, page, pageSize int32) ([]*User, int32, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	if page <= 0 {
		page = 1
	}
	if pageSize <= 0 {
		pageSize = 20
	}
	offset := (page - 1) * pageSize

	// ƒê·∫øm t·ªïng s·ªë users
	var total int32
	countQuery := `SELECT COUNT(*) FROM users`
	err := r.db.QueryRowContext(ctx, countQuery).Scan(&total)
	if err != nil {
		return nil, 0, fmt.Errorf("l·ªói ƒë·∫øm users: %v", err)
	}

	// L·∫•y danh s√°ch user
	query := `
		SELECT id, email, password, full_name, referrer_id, created_at, role
		FROM users
		ORDER BY created_at DESC
		LIMIT ? OFFSET ?
	`
	rows, err := r.db.QueryContext(ctx, query, pageSize, offset)
	if err != nil {
		return nil, 0, fmt.Errorf("l·ªói truy v·∫•n danh s√°ch users: %v", err)
	}
	defer rows.Close()

	var users []*User
	for rows.Next() {
		var user User
		var referrerID sql.NullString
		err := rows.Scan(
			&user.ID,
			&user.Email,
			&user.Password,
			&user.FullName,
			&referrerID,
			&user.CreatedAt,
			&user.Role,
		)
		if err != nil {
			return nil, 0, fmt.Errorf("l·ªói scan user: %v", err)
		}
		if referrerID.Valid {
			user.ReferrerID = &referrerID.String
		}
		users = append(users, &user)
	}

	return users, total, nil
}

// üîπ GET REFERRALS

func (r *MySQLRepository) GetReferrals(ctx context.Context, userID string) ([]*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	query := `
		SELECT id, email, password, full_name, referrer_id, created_at, role
		FROM users
		WHERE referrer_id = ?
		ORDER BY created_at DESC
	`
	rows, err := r.db.QueryContext(ctx, query, userID)
	if err != nil {
		return nil, fmt.Errorf("l·ªói truy v·∫•n referrals: %v", err)
	}
	defer rows.Close()

	var referrals []*User
	for rows.Next() {
		var user User
		var referrerID sql.NullString
		err := rows.Scan(
			&user.ID,
			&user.Email,
			&user.Password,
			&user.FullName,
			&referrerID,
			&user.CreatedAt,
			&user.Role,
		)
		if err != nil {
			return nil, fmt.Errorf("l·ªói scan referral: %v", err)
		}
		if referrerID.Valid {
			user.ReferrerID = &referrerID.String
		}
		referrals = append(referrals, &user)
	}

	return referrals, nil
}

// DeleteInactive x√≥a c√°c user ƒë∆∞·ª£c t·∫°o tr∆∞·ªõc m·ªôt m·ªëc th·ªùi gian
func (r *MySQLRepository) DeleteInactive(ctx context.Context, threshold time.Time) (int64, error) {
	query := `DELETE FROM users WHERE created_at < ? AND last_login_at IS NULL`
	result, err := r.db.ExecContext(ctx, query, threshold)
	if err != nil {
		return 0, fmt.Errorf("l·ªói khi x√≥a user kh√¥ng ho·∫°t ƒë·ªông: %v", err)
	}
	rowsAffected, err := result.RowsAffected()
	if err != nil {
		return 0, fmt.Errorf("l·ªói khi l·∫•y s·ªë d√≤ng b·ªã ·∫£nh h∆∞·ªüng: %v", err)
	}
	return rowsAffected, nil
}

// H√†m Ping cho Health Check
func (r *MySQLRepository) Ping(ctx context.Context) error {
	ctx, cancel := context.WithTimeout(ctx, 2*time.Second) // Ping n√™n c√≥ timeout ng·∫Øn
	defer cancel()
	return r.db.PingContext(ctx)
}

// H√†m c·∫≠p nh·∫≠t th·ªùi gian login
func (r *MySQLRepository) UpdateLastLogin(ctx context.Context, userID string) error {
	query := `UPDATE users SET last_login_at = ? WHERE id = ?`
	_, err := r.db.ExecContext(ctx, query, time.Now(), userID)
	if err != nil {
		return fmt.Errorf("l·ªói c·∫≠p nh·∫≠t last_login_at: %v", err)
	}
	return nil
}

// H√†m ƒë·∫øm user active
func (r *MySQLRepository) GetActiveUsersCount(ctx context.Context, since time.Time) (int64, error) {
	var count int64
	query := `SELECT COUNT(DISTINCT id) FROM users WHERE last_login_at >= ?`
	err := r.db.QueryRowContext(ctx, query, since).Scan(&count)
	if err != nil {
		return 0, fmt.Errorf("l·ªói ƒë·∫øm active users: %v", err)
	}
	return count, nil
}
