// File: internal/user/repository_redis.go
package user

import (
	"context"
	"fmt"
	"log"
	"strconv"
	"time"

	"user-management-grpc/internal/utils" // Import utils ƒë·ªÉ hash password

	"github.com/google/uuid"
	"github.com/redis/go-redis/v9"
)

// --- C√ÅC H·∫∞NG S·ªê KEY C·ª¶A REDIS ---
// D√πng h·∫±ng s·ªë gi√∫p qu·∫£n l√Ω key t·∫≠p trung, tr√°nh g√µ sai
const (
	keyUserPrefix     = "user:profile:"       // (HASH) user:profile:{id} -> {user_data}
	keyIndexEmailToID = "users:by_email"      // (HASH) users:by_email -> {email} -> {id}
	keySetReferrals   = "user:referrals:"     // (SET)  user:referrals:{id} -> SET[{id_1}, {id_2}]
	keyZSetCreatedAt  = "users:by_created_at" // (ZSET) users:by_created_at -> {created_at_score} -> {user_key}
	keyZSetLastLogin  = "users:by_last_login" // (ZSET) users:by_last_login -> {last_login_score} -> {user_key}
)

// C·∫•u tr√∫c Repository
type RedisRepository struct {
	client *redis.Client
}

// H√†m kh·ªüi t·∫°o
// Ch√∫ √Ω: H√†m n√†y tr·∫£ v·ªÅ interface 'Repository', kh√¥ng ph·∫£i *RedisRepository
func NewRedisRepository(client *redis.Client) Repository {
	return &RedisRepository{client: client}
}

// --- H√ÄM HELPER: L·∫•y Key chu·∫©n ---
func userKey(id string) string {
	return keyUserPrefix + id
}

// === TRI·ªÇN KHAI INTERFACE REPOSITORY ===

// üîπ 1. CREATE USER
// Ph√¢n t√≠ch: ƒê√¢y l√† h√†m ph·ª©c t·∫°p nh·∫•t.
// 1. Ph·∫£i hash password.
// 2. Ph·∫£i ki·ªÉm tra email t·ªìn t·∫°i (d√πng index 'users:by_email')
// 3. Ph·∫£i ghi 4 CSDL c√πng l√∫c:
//   - HASH (H·ªì s∆° user)
//   - HASH (Index Email -> ID)
//   - ZSET (Index CreatedAt)
//   - ZSET (Index LastLogin, m·∫∑c ƒë·ªãnh l√† 0)
//   - SET (N·∫øu c√≥ ng∆∞·ªùi gi·ªõi thi·ªáu)
//
// 4. D√πng Pipeline (ƒë∆∞·ªùng ·ªëng) ƒë·ªÉ gom t·∫•t c·∫£ l·ªánh ghi l·∫°i, tƒÉng t·ªëc ƒë·ªô.
func (r *RedisRepository) Create(ctx context.Context, u *User) error {
	ctx, cancel := context.WithTimeout(ctx, 5*time.Second) // Redis nhanh, nh∆∞ng 5s cho an to√†n
	defer cancel()

	// T·∫°o ID v√† th·ªùi gian
	if u.ID == "" {
		u.ID = uuid.New().String()
	}
	if u.CreatedAt.IsZero() {
		u.CreatedAt = time.Now()
	}

	// === B∆Ø·ªöC 1: KI·ªÇM TRA EMAIL T·ªíN T·∫†I (ATOMIC) ===
	// D√πng HSetNX (Hash Set If Not Exists)
	// L·ªánh n√†y s·∫Ω set email->id CH·ªà KHI email ƒë√≥ ch∆∞a t·ªìn t·∫°i.
	emailClaimed, err := r.client.HSetNX(ctx, keyIndexEmailToID, u.Email, u.ID).Result()
	if err != nil {
		return fmt.Errorf("l·ªói ki·ªÉm tra email HSetNX: %v", err)
	}
	if !emailClaimed {
		// HSetNX tr·∫£ v·ªÅ false, nghƒ©a l√† email n√†y ƒë√£ t·ªìn t·∫°i trong HASH
		return fmt.Errorf("email ƒë√£ t·ªìn t·∫°i: %s", u.Email)
	}

	// === B∆Ø·ªöC 2: EMAIL L√Ä C·ª¶A CH√öNG TA -> TI·∫æN H√ÄNH T·∫†O USER ===
	// Hash password
	hashedPassword, err := utils.HashPassword(u.Password)
	if err != nil {
		// L·ªói: Ph·∫£i x√≥a "claim" email ƒë√£
		r.client.HDel(ctx, keyIndexEmailToID, u.Email) // C·ªë g·∫Øng d·ªçn d·∫πp
		return fmt.Errorf("l·ªói m√£ h√≥a m·∫≠t kh·∫©u: %v", err)
	}
	u.Password = hashedPassword // C·∫≠p nh·∫≠t password ƒë√£ hash v√†o struct

	// Chu·∫©n b·ªã key ch√≠nh
	key := userKey(u.ID)
	createdAtScore := float64(u.CreatedAt.Unix())

	// Chuy·ªÉn struct User sang map ƒë·ªÉ l∆∞u HASH
	userData, err := u.marshalRedisHash() // D√πng h√†m helper (·ªü cu·ªëi file)
	if err != nil {
		r.client.HDel(ctx, keyIndexEmailToID, u.Email) // C·ªë g·∫Øng d·ªçn d·∫πp
		return fmt.Errorf("l·ªói marshal user: %v", err)
	}

	// === B∆Ø·ªöC 3: D√ôNG PIPELINE ƒê·ªÇ GHI T·∫§T C·∫¢ D·ªÆ LI·ªÜU ===
	pipe := r.client.Pipeline()

	// 1. (HASH) Ghi h·ªì s∆° user
	pipe.HSet(ctx, key, userData)

	// 2. (ZSET) Ghi v√†o b·∫£ng x·∫øp h·∫°ng "User m·ªõi nh·∫•t"
	pipe.ZAdd(ctx, keyZSetCreatedAt, redis.Z{
		Score:  createdAtScore,
		Member: key, // Member l√† "user:profile:uuid-123"
	})

	// 3. (ZSET) Ghi v√†o b·∫£ng x·∫øp h·∫°ng "Last Login" (m·∫∑c ƒë·ªãnh l√† 0)
	// ƒêi·ªÅu n√†y R·∫§T QUAN TR·ªåNG cho job 'DeleteInactive'
	pipe.ZAdd(ctx, keyZSetLastLogin, redis.Z{
		Score:  0, // 0 = ch∆∞a bao gi·ªù login
		Member: key,
	})

	// 4. (SET) C·∫≠p nh·∫≠t danh s√°ch ng∆∞·ªùi gi·ªõi thi·ªáu (n·∫øu c√≥)
	if u.ReferrerID != nil && *u.ReferrerID != "" {
		referralKey := keySetReferrals + *u.ReferrerID
		pipe.SAdd(ctx, referralKey, u.ID) // Th√™m ID c·ªßa user n√†y v√†o SET c·ªßa ng∆∞·ªùi gi·ªõi thi·ªáu
	}

	// Th·ª±c thi t·∫•t c·∫£ l·ªánh
	// N·∫øu 1 trong c√°c l·ªánh n√†y l·ªói, user s·∫Ω ·ªü tr·∫°ng th√°i "n·ª≠a v·ªùi"
	// (ƒê√¢y l√† ƒëi·ªÉm y·∫øu c·ªßa NoSQL so v·ªõi ACID c·ªßa MySQL)
	_, err = pipe.Exec(ctx)
	if err != nil {
		// C·ªë g·∫Øng d·ªçn d·∫πp (Rollback)
		r.client.HDel(ctx, keyIndexEmailToID, u.Email)
		r.client.Del(ctx, key)
		r.client.ZRem(ctx, keyZSetCreatedAt, key)
		r.client.ZRem(ctx, keyZSetLastLogin, key)
		// (Vi·ªác d·ªçn d·∫πp SET Referrer r·∫•t ph·ª©c t·∫°p, t·∫°m b·ªè qua)
		return fmt.Errorf("l·ªói khi ghi pipeline t·∫°o user: %v", err)
	}

	log.Printf("‚úÖ [Redis] ƒê√£ t·∫°o user: %s", u.Email)
	return nil
}

// üîπ 2. GET USER BY ID
// Ph√¢n t√≠ch: R·∫•t ƒë∆°n gi·∫£n, ch·ªâ c·∫ßn HGETALL t·ª´ key
func (r *RedisRepository) GetByID(ctx context.Context, id string) (*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	key := userKey(id)
	// HGetAll tr·∫£ v·ªÅ map[string]string
	userDataMap, err := r.client.HGetAll(ctx, key).Result()

	if err != nil {
		// L·ªói k·∫øt n·ªëi
		return nil, fmt.Errorf("l·ªói redis HGetAll: %v", err)
	}
	if len(userDataMap) == 0 {
		// Key kh√¥ng t·ªìn t·∫°i, ho·∫∑c HASH r·ªóng
		return nil, fmt.Errorf("user kh√¥ng t·ªìn t·∫°i: %s", id)
	}

	// Chuy·ªÉn map[string]string sang struct User
	return unmarshalRedisHash(userDataMap) // D√πng h√†m helper (·ªü cu·ªëi file)
}

// üîπ 3. GET USER BY EMAIL
// Ph√¢n t√≠ch: D√πng "ch·ªâ m·ª•c" (index) HASH 'users:by_email'
func (r *RedisRepository) GetByEmail(ctx context.Context, email string) (*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	// B∆∞·ªõc A: L·∫•y ID t·ª´ "ch·ªâ m·ª•c" email
	userID, err := r.client.HGet(ctx, keyIndexEmailToID, email).Result()
	if err == redis.Nil {
		// Kh√¥ng c√≥ field 'email' n√†y trong HASH
		return nil, fmt.Errorf("email kh√¥ng t·ªìn t·∫°i: %s", email)
	}
	if err != nil {
		return nil, fmt.Errorf("l·ªói redis HGet email index: %v", err)
	}

	// B∆∞·ªõc B: D√πng ID l·∫•y ƒë∆∞·ª£c ƒë·ªÉ g·ªçi h√†m GetByID (T√°i s·ª≠ d·ª•ng code)
	return r.GetByID(ctx, userID)
}

// üîπ 4. UPDATE USER
// Ph√¢n t√≠ch: Gi·ªëng MySQL, ch·ªâ c·∫≠p nh·∫≠t email v√† full_name
// V·∫§N ƒê·ªÄ: N·∫øu ƒë·ªïi email th√¨ sao? Ph·∫£i c·∫≠p nh·∫≠t "ch·ªâ m·ª•c" email!
func (r *RedisRepository) Update(ctx context.Context, u *User) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	key := userKey(u.ID)

	// B∆∞·ªõc 1: L·∫•y user C≈® ƒë·ªÉ bi·∫øt email C≈® l√† g√¨
	oldUser, err := r.GetByID(ctx, u.ID)
	if err != nil {
		return err // User kh√¥ng t·ªìn t·∫°i
	}

	// === D√πng Pipeline ƒë·ªÉ c·∫≠p nh·∫≠t ===
	pipe := r.client.Pipeline()

	// B∆∞·ªõc 2: C·∫≠p nh·∫≠t HASH ch√≠nh
	pipe.HSet(ctx, key, "full_name", u.FullName)

	// B∆∞·ªõc 3: X·ª≠ l√Ω logic ƒë·ªïi email (n·∫øu c√≥)
	if oldUser.Email != u.Email {
		// Email ƒë√£ thay ƒë·ªïi
		// 1. X√≥a "ch·ªâ m·ª•c" email C≈®
		pipe.HDel(ctx, keyIndexEmailToID, oldUser.Email)
		// 2. Th√™m "ch·ªâ m·ª•c" email M·ªöI
		// (B·ªè qua ki·ªÉm tra HSetNX ·ªü ƒë√¢y cho ƒë∆°n gi·∫£n, gi·∫£ ƒë·ªãnh Service ƒë√£ check)
		pipe.HSet(ctx, keyIndexEmailToID, u.Email, u.ID)
		// 3. C·∫≠p nh·∫≠t email M·ªöI v√†o HASH
		pipe.HSet(ctx, key, "email", u.Email)
	}

	// B∆∞·ªõc 4: Th·ª±c thi
	_, err = pipe.Exec(ctx)
	if err != nil {
		return fmt.Errorf("l·ªói pipeline c·∫≠p nh·∫≠t user: %v", err)
	}

	log.Printf("‚úÖ [Redis] ƒê√£ c·∫≠p nh·∫≠t user: %s", u.ID)
	return nil
}

// üîπ 5. DELETE USER
// Ph√¢n t√≠ch: Ph·∫£i "d·ªçn d·∫πp" ·ªü T·∫§T C·∫¢ c√°c n∆°i user n√†y xu·∫•t hi·ªán
// 1. X√≥a HASH (H·ªì s∆°)
// 2. X√≥a HASH (Index Email)
// 3. X√≥a ZSET (Index CreatedAt)
// 4. X√≥a ZSET (Index LastLogin)
// 5. X√≥a SET (N·∫øu user n√†y l√† 1 referral)
func (r *RedisRepository) Delete(ctx context.Context, id string) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	key := userKey(id)

	// B∆∞·ªõc 1: L·∫•y user C≈® (ƒë·ªÉ bi·∫øt email, referrerID)
	user, err := r.GetByID(ctx, id)
	if err != nil {
		return err // User kh√¥ng t·ªìn t·∫°i
	}

	// === D√πng Pipeline ƒë·ªÉ x√≥a ===
	pipe := r.client.Pipeline()

	// 1. X√≥a HASH (H·ªì s∆° ch√≠nh)
	pipe.Del(ctx, key)
	// 2. X√≥a "ch·ªâ m·ª•c" email
	pipe.HDel(ctx, keyIndexEmailToID, user.Email)
	// 3. X√≥a kh·ªèi ZSET "User m·ªõi nh·∫•t"
	pipe.ZRem(ctx, keyZSetCreatedAt, key)
	// 4. X√≥a kh·ªèi ZSET "Last Login"
	pipe.ZRem(ctx, keyZSetLastLogin, key)
	// 5. X√≥a kh·ªèi SET "Referrals" (n·∫øu c√≥)
	if user.ReferrerID != nil && *user.ReferrerID != "" {
		referralKey := keySetReferrals + *user.ReferrerID
		pipe.SRem(ctx, referralKey, user.ID)
	}

	// B∆∞·ªõc 2: Th·ª±c thi
	_, err = pipe.Exec(ctx)
	if err != nil {
		return fmt.Errorf("l·ªói pipeline x√≥a user: %v", err)
	}

	log.Printf("‚úÖ [Redis] ƒê√£ x√≥a user: %s", id)
	return nil
}

// üîπ 6. LIST USERS (ph√¢n trang)
// Ph√¢n t√≠ch: D√πng ZSET 'users:by_created_at'
func (r *RedisRepository) List(ctx context.Context, page, pageSize int32) ([]*User, int32, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	if page <= 0 {
		page = 1
	}
	if pageSize <= 0 {
		pageSize = 20
	}
	// ZSET index l√† 0-based
	start := int64(page-1) * int64(pageSize)
	stop := start + int64(pageSize) - 1

	// === D√πng Pipeline ƒë·ªÉ l·∫•y T·ªîNG S·ªê v√† DANH S√ÅCH ===
	pipe := r.client.Pipeline()

	// 1. L·∫•y t·ªïng s·ªë (ZCard = ZSET Count)
	totalCmd := pipe.ZCard(ctx, keyZSetCreatedAt)

	// 2. L·∫•y danh s√°ch ID (ZRevRange = ZSET Reverse Range, v√¨ ƒëi·ªÉm cao = m·ªõi nh·∫•t)
	userKeysCmd := pipe.ZRevRange(ctx, keyZSetCreatedAt, start, stop)

	_, err := pipe.Exec(ctx)
	if err != nil {
		return nil, 0, fmt.Errorf("l·ªói pipeline List: %v", err)
	}

	total := totalCmd.Val()
	userKeys := userKeysCmd.Val()

	if len(userKeys) == 0 {
		return []*User{}, int32(total), nil
	}

	// === B∆∞·ªõc B: L·∫§Y CHI TI·∫æT T·ª™NG USER (D√πng Pipeline) ===
	pipeGetUsers := r.client.Pipeline()
	cmds := make([]*redis.MapStringStringCmd, len(userKeys))
	for i, key := range userKeys {
		cmds[i] = pipeGetUsers.HGetAll(ctx, key)
	}
	_, err = pipeGetUsers.Exec(ctx)
	if err != nil && err != redis.Nil {
		return nil, 0, fmt.Errorf("l·ªói pipeline HGetAll list: %v", err)
	}

	// 3. ƒê·ªçc k·∫øt qu·∫£
	var users []*User
	for _, cmd := range cmds {
		userData, err := cmd.Result()
		if err == nil && len(userData) > 0 {
			user, err := unmarshalRedisHash(userData)
			if err == nil {
				users = append(users, user)
			}
		}
	}

	return users, int32(total), nil
}

// üîπ 7. GET REFERRALS
// Ph√¢n t√≠ch: D√πng SET 'user:referrals:{id}'
func (r *RedisRepository) GetReferrals(ctx context.Context, userID string) ([]*User, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	referralKey := keySetReferrals + userID

	// B∆∞·ªõc A: L·∫•y danh s√°ch ID t·ª´ SET
	referralIDs, err := r.client.SMembers(ctx, referralKey).Result()
	if err != nil {
		return nil, fmt.Errorf("l·ªói SMembers: %v", err)
	}

	if len(referralIDs) == 0 {
		return []*User{}, nil
	}

	// B∆∞·ªõc B: L·∫•y chi ti·∫øt t·ª´ng user (D√πng Pipeline)
	pipe := r.client.Pipeline()
	cmds := make([]*redis.MapStringStringCmd, len(referralIDs))
	for i, id := range referralIDs {
		cmds[i] = pipe.HGetAll(ctx, userKey(id))
	}
	_, err = pipe.Exec(ctx)
	if err != nil && err != redis.Nil {
		return nil, fmt.Errorf("l·ªói pipeline HGetAll referrals: %v", err)
	}

	// 3. ƒê·ªçc k·∫øt qu·∫£
	var users []*User
	for _, cmd := range cmds {
		userData, err := cmd.Result()
		if err == nil && len(userData) > 0 {
			user, err := unmarshalRedisHash(userData)
			if err == nil {
				users = append(users, user)
			}
		}
	}

	return users, nil
}

// üîπ 8. DELETE INACTIVE
// Ph√¢n t√≠ch: X√≥a user (created_at < threshold) V√Ä (last_login_at IS NULL)
// D√πng ZSET 'users:by_last_login'
func (r *RedisRepository) DeleteInactive(ctx context.Context, threshold time.Time) (int64, error) {
	// L·∫•y t·∫•t c·∫£ user C√ì ƒêI·ªÇM = 0 (t·ª©c l√† ch∆∞a bao gi·ªù login)
	keysOfNeverLoggedIn, err := r.client.ZRangeByScore(ctx, keyZSetLastLogin, &redis.ZRangeBy{
		Min: "0",
		Max: "0",
	}).Result()
	if err != nil {
		return 0, fmt.Errorf("l·ªói ZRangeByScore: %v", err)
	}

	if len(keysOfNeverLoggedIn) == 0 {
		return 0, nil
	}

	// === B∆∞·ªõc B: Ki·ªÉm tra CreatedAt c·ªßa c√°c user n√†y ===
	// Ch√∫ng ta c·∫ßn 'user:profile:id' (l√† member)
	// ch·ª© kh√¥ng ph·∫£i 'id'

	thresholdUnix := threshold.Unix()
	keysToActuallyDelete := []string{} // Danh s√°ch c√°c userKey (user:profile:id)

	// D√πng Pipeline ƒë·ªÉ check HGET 1 lo·∫°t
	pipe := r.client.Pipeline()
	cmds := make([]*redis.StringCmd, len(keysOfNeverLoggedIn))
	for i, key := range keysOfNeverLoggedIn {
		cmds[i] = pipe.HGet(ctx, key, "created_at")
	}
	_, err = pipe.Exec(ctx)
	if err != nil && err != redis.Nil {
		return 0, fmt.Errorf("l·ªói pipeline HGet created_at: %v", err)
	}

	// L·ªçc ra nh·ªØng user th·ªèa m√£n c·∫£ 2 ƒëi·ªÅu ki·ªán
	for i, cmd := range cmds {
		createdAtStr, err := cmd.Result()
		if err == nil {
			createdAt, _ := strconv.ParseInt(createdAtStr, 10, 64)
			if createdAt < thresholdUnix {
				// ƒê√öNG L√Ä USER C·∫¶N X√ìA!
				keysToActuallyDelete = append(keysToActuallyDelete, keysOfNeverLoggedIn[i])
			}
		}
	}

	if len(keysToActuallyDelete) == 0 {
		return 0, nil
	}

	// === B∆∞·ªõc C: X√≥a t·∫•t c·∫£ (D√πng h√†m Delete() ƒë√£ vi·∫øt) ===
	// Ch·∫°y tu·∫ßn t·ª± ƒë·ªÉ ƒë·∫£m b·∫£o logic d·ªçn d·∫πp ph·ª©c t·∫°p ƒë∆∞·ª£c ch·∫°y ƒë√∫ng
	var deletedCount int64
	for _, key := range keysToActuallyDelete {
		// 'key' ·ªü ƒë√¢y l√† 'user:profile:id'. C·∫ßn tr√≠ch xu·∫•t 'id'
		id := key[len(keyUserPrefix):]
		if err := r.Delete(ctx, id); err == nil {
			deletedCount++
		} else {
			log.Printf("‚ö†Ô∏è [Redis] L·ªói khi x√≥a inactive user %s: %v", id, err)
		}
	}

	log.Printf("‚úÖ [Redis] ƒê√£ x√≥a %d inactive users", deletedCount)
	return deletedCount, nil
}

// üîπ 9. PING
func (r *RedisRepository) Ping(ctx context.Context) error {
	ctx, cancel := context.WithTimeout(ctx, 2*time.Second)
	defer cancel()
	return r.client.Ping(ctx).Err()
}

// üîπ 10. UPDATE LAST LOGIN
// Ph√¢n t√≠ch: C·∫≠p nh·∫≠t c·∫£ HASH v√† ZSET 'users:by_last_login'
func (r *RedisRepository) UpdateLastLogin(ctx context.Context, userID string) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	key := userKey(userID)
	now := time.Now()
	loginScore := float64(now.Unix())

	pipe := r.client.Pipeline()

	// 1. (HASH) C·∫≠p nh·∫≠t h·ªì s∆°
	pipe.HSet(ctx, key, "last_login_at", loginScore)

	// 2. (ZSET) C·∫≠p nh·∫≠t b·∫£ng x·∫øp h·∫°ng "Last Login"
	pipe.ZAdd(ctx, keyZSetLastLogin, redis.Z{
		Score:  loginScore,
		Member: key,
	})

	_, err := pipe.Exec(ctx)
	if err != nil {
		return fmt.Errorf("l·ªói pipeline c·∫≠p nh·∫≠t last_login: %v", err)
	}
	return nil
}

// üîπ 11. GET ACTIVE USERS COUNT
// Ph√¢n t√≠ch: D√πng ZSET 'users:by_last_login'
func (r *RedisRepository) GetActiveUsersCount(ctx context.Context, since time.Time) (int64, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	minScore := strconv.FormatInt(since.Unix(), 10)

	// ZCount ƒë·∫øm s·ªë member c√≥ score trong kho·∫£ng [min, max]
	count, err := r.client.ZCount(ctx, keyZSetLastLogin, minScore, "+inf").Result()
	if err != nil {
		return 0, fmt.Errorf("l·ªói ZCount: %v", err)
	}
	return count, nil
}
