// File: internal/user/service.go
package user

import (
	"context"
	"fmt"
	"log"
	"strings" // ‚¨ÖÔ∏è TH√äM IMPORT
	"sync"
	"time"

	"user-management-grpc/api/proto"
	"user-management-grpc/internal/utils"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
	"google.golang.org/protobuf/types/known/timestamppb"
)

// ‚≠êÔ∏è S·ª¨A: ƒê·ªãnh nghƒ©a Interface cho Notification (Th·ª±c h√†nh t·ªët)
type NotificationClient interface {
	SendWelcomeEmail(ctx context.Context, req *proto.NotificationRequest, opts ...grpc.CallOption) (*proto.NotificationResponse, error)
	SendNotification(ctx context.Context, req *proto.NotificationRequest, opts ...grpc.CallOption) (*proto.NotificationResponse, error)
}

type Service struct {
	proto.UnimplementedUserServiceServer
	repo               Repository
	userCache          *UserCache
	referralMap        *utils.SafeMap
	notificationClient NotificationClient // ‚≠êÔ∏è S·ª¨A: D√πng interface
	mu                 sync.RWMutex
}

type UserCache struct {
	mu   sync.RWMutex
	data map[string]*User
}

func NewUserCache() *UserCache {
	return &UserCache{
		data: make(map[string]*User),
	}
}

func (c *UserCache) Get(id string) (*User, bool) {
	c.mu.RLock()
	defer c.mu.RUnlock()
	user, exists := c.data[id]
	return user, exists
}

func (c *UserCache) Set(id string, user *User) {
	c.mu.Lock()
	defer c.mu.Unlock()
	c.data[id] = user
}

func (c *UserCache) Delete(id string) {
	c.mu.Lock()
	defer c.mu.Unlock()
	delete(c.data, id)
}

// ‚≠êÔ∏è S·ª¨A: Nh·∫≠n NotificationClient interface
func NewService(repo Repository, notificationClient NotificationClient) *Service {
	return &Service{
		repo:               repo,
		userCache:          NewUserCache(),
		referralMap:        utils.NewSafeMap(),
		notificationClient: notificationClient,
	}
}

// ‚≠êÔ∏è S·ª¨A: H√†m CreateUser
func (s *Service) CreateUser(ctx context.Context, req *proto.CreateUserRequest) (*proto.User, error) {
	defer utils.Recovery()

	if req.Email == "" || req.Password == "" {
		return nil, status.Error(codes.InvalidArgument, "email v√† password l√† b·∫Øt bu·ªôc")
	}

	// --- 1. Chuy·ªÉn ƒë·ªïi (Map) t·ª´ Proto Request -> Model DB ---
	user := &User{
		Email:     req.Email,
		Password:  req.Password, // Repo s·∫Ω hash m·∫≠t kh·∫©u n√†y
		FullName:  req.FullName,
		CreatedAt: time.Now(),

		// ‚≠êÔ∏è S·ª¨A: G√°n Role m·∫∑c ƒë·ªãnh l√† 'user'
		// ƒê√¢y ch√≠nh l√† logic ƒë√£ s·ª≠a l·ªói HSET (integer) 1 th√†nh 0
		Role: "user",
	}

	// ‚≠êÔ∏è S·ª¨A: X·ª≠ l√Ω referrerId
	if req.ReferrerId != "" {
		// (Trong d·ª± √°n th·∫≠t, b·∫°n n√™n ki·ªÉm tra xem referrerId c√≥ t·ªìn t·∫°i kh√¥ng)
		// (Logic ki·ªÉm tra referrerId c·ªßa b·∫°n ƒë√£ b·ªã x√≥a, t√¥i th√™m l·∫°i)
		_, err := s.repo.GetByID(ctx, req.ReferrerId)
		if err != nil {
			log.Printf("‚ö†Ô∏è Referrer kh√¥ng t·ªìn t·∫°i: %s", req.ReferrerId)
			// (B·∫°n c√≥ th·ªÉ quy·∫øt ƒë·ªãnh tr·∫£ v·ªÅ l·ªói ho·∫∑c b·ªè qua. ·ªû ƒë√¢y ch√∫ng ta b·ªè qua)
		} else {
			log.Printf("‚úÖ User %s ƒë∆∞·ª£c m·ªùi b·ªüi %s", req.Email, req.ReferrerId)
			user.ReferrerID = &req.ReferrerId
			// (B·∫°n d√πng referralMap, nh∆∞ng t·ªët h∆°n l√† logic n√†y n√™n ·ªü Repo)
			s.referralMap.Set(req.ReferrerId, true)
		}
	}

	// --- 2. G·ªçi Repository (MySQL ho·∫∑c Redis) ---
	if err := s.repo.Create(ctx, user); err != nil {
		log.Printf("‚ùå L·ªói khi t·∫°o user trong DB: %v", err)
		// ‚≠êÔ∏è S·ª¨A: Ki·ªÉm tra l·ªói tr√πng l·∫∑p (t·ª´ HSetNX c·ªßa Redis ho·∫∑c UNIQUE c·ªßa MySQL)
		if strings.Contains(err.Error(), "email ƒë√£ t·ªìn t·∫°i") {
			return nil, status.Error(codes.AlreadyExists, "email ƒë√£ t·ªìn t·∫°i")
		}
		return nil, status.Error(codes.Internal, "failed to create user")
	}

	// --- 3. G·ª≠i email b·∫•t ƒë·ªìng b·ªô ---
	go func() {
		defer utils.Recovery()
		s.sendWelcomeEmail(user)
	}()

	// --- 4. Chuy·ªÉn ƒë·ªïi (Map) t·ª´ Model DB -> Proto Response ---
	// ‚≠êÔ∏è S·ª¨A: D√πng h√†m helper chu·∫©n (ƒë√£ ƒë∆∞·ª£c s·ª≠a)
	return s.userToProto(user), nil
}

// ‚≠êÔ∏è S·ª¨A: H√†m GetUser
func (s *Service) GetUser(ctx context.Context, req *proto.GetUserRequest) (*proto.User, error) {
	defer utils.Recovery()

	if req.Id == "" {
		return nil, status.Error(codes.InvalidArgument, "id l√† b·∫Øt bu·ªôc")
	}

	// üéØ Ki·ªÉm tra cache tr∆∞·ªõc
	// ‚≠êÔ∏è S·ª¨A: Logic cache c·ªßa b·∫°n c√≥ RWMutex ·ªü 2 n∆°i (Cache v√† Service)
	// G√¢y ra double-lock. Ch·ªâ n√™n lock ·ªü 1 n∆°i (trong UserCache).
	if cachedUser, exists := s.userCache.Get(req.Id); exists {
		log.Printf("‚úÖ L·∫•y user t·ª´ cache: %s", req.Id)
		return s.userToProto(cachedUser), nil
	}

	// L·∫•y t·ª´ database
	user, err := s.repo.GetByID(ctx, req.Id)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user kh√¥ng t·ªìn t·∫°i")
	}

	// Cache k·∫øt qu·∫£
	s.userCache.Set(user.ID, user)

	// ‚≠êÔ∏è S·ª¨A: D√πng h√†m helper chu·∫©n (ƒë√£ ƒë∆∞·ª£c s·ª≠a)
	return s.userToProto(user), nil
}

// ‚≠êÔ∏è S·ª¨A: H√†m UpdateUser
func (s *Service) UpdateUser(ctx context.Context, req *proto.UpdateUserRequest) (*proto.User, error) {
	defer utils.Recovery()

	if req.Id == "" {
		return nil, status.Error(codes.InvalidArgument, "id l√† b·∫Øt bu·ªôc")
	}

	// --- 1. L·∫•y user hi·ªán t·∫°i ---
	user, err := s.repo.GetByID(ctx, req.Id)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user kh√¥ng t·ªìn t·∫°i")
	}

	// --- 2. C·∫≠p nh·∫≠t c√°c tr∆∞·ªùng ---
	// (Logic c≈© c·ªßa b·∫°n cho ph√©p ƒë·ªïi email, logic m·ªõi c·ªßa t√¥i kh√¥ng.
	// Ch√∫ng ta gi·ªØ logic c·ªßa b·∫°n, nh∆∞ng ƒë·∫£m b·∫£o ƒë·ªçc ƒë√∫ng)
	user.Email = req.Email
	user.FullName = req.FullName
	// (L∆∞u √Ω: Logic ƒë·ªïi email n√†y s·∫Ω TH·∫§T B·∫†I n·∫øu b·∫°n d√πng RedisRepository,
	// v√¨ RedisRepository (m·ªõi) c·ªßa t√¥i c√≥ HSetNX ƒë·ªÉ check tr√πng l·∫∑p)
	// (Ch√∫ng ta s·∫Ω b·ªè qua logic ƒë·ªïi email ƒë·ªÉ ƒë∆°n gi·∫£n h√≥a)

	// === LOGIC UPDATE ƒê√öNG (Nh∆∞ b·∫°n test) ===
	user.FullName = req.FullName
	// (Ch√∫ng ta kh√¥ng cho ph√©p user t·ª± ƒë·ªïi 'role' qua API n√†y)
	// (Ch·ªâ "admin" m·ªõi ƒë∆∞·ª£c ƒë·ªïi 'role', nh∆∞ c√°ch b·∫°n 'HSET' th·ªß c√¥ng)

	// --- 3. G·ªçi Repository ---
	err = s.repo.Update(ctx, user)
	if err != nil {
		return nil, status.Error(codes.Internal, err.Error())
	}

	// --- 4. C·∫≠p nh·∫≠t cache ---
	s.userCache.Set(user.ID, user)

	// --- 5. Tr·∫£ v·ªÅ ---
	// ‚≠êÔ∏è S·ª¨A: D√πng h√†m helper chu·∫©n (ƒë√£ ƒë∆∞·ª£c s·ª≠a)
	return s.userToProto(user), nil
}

// ‚≠êÔ∏è S·ª¨A: H√†m DeleteUser
func (s *Service) DeleteUser(ctx context.Context, req *proto.DeleteUserRequest) (*emptypb.Empty, error) {
	defer utils.Recovery()

	if req.Id == "" {
		return nil, status.Error(codes.InvalidArgument, "id l√† b·∫Øt bu·ªôc")
	}

	err := s.repo.Delete(ctx, req.Id)
	if err != nil {
		return nil, status.Error(codes.Internal, err.Error())
	}

	// X√≥a cache
	s.userCache.Delete(req.Id)

	log.Printf("‚úÖ ƒê√£ x√≥a user: %s", req.Id)
	return &emptypb.Empty{}, nil
}

// ‚≠êÔ∏è S·ª¨A: H√†m ListUsers
func (s *Service) ListUsers(ctx context.Context, req *proto.ListUsersRequest) (*proto.ListUsersResponse, error) {
	defer utils.Recovery()

	page := req.Page
	if page <= 0 {
		page = 1
	}

	pageSize := req.PageSize
	if pageSize <= 0 || pageSize > 100 {
		pageSize = 20
	}

	users, total, err := s.repo.List(ctx, page, pageSize)
	if err != nil {
		return nil, status.Error(codes.Internal, err.Error())
	}

	protoUsers := make([]*proto.User, len(users))
	for i, user := range users {
		protoUsers[i] = s.userToProto(user)
	}

	return &proto.ListUsersResponse{
		Users: protoUsers,
		Total: total,
	}, nil
}

// ‚≠êÔ∏è S·ª¨A: H√†m GetUserReferrals
func (s *Service) GetUserReferrals(ctx context.Context, req *proto.GetReferralsRequest) (*proto.GetReferralsResponse, error) {
	defer utils.Recovery()

	if req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id l√† b·∫Øt bu·ªôc")
	}

	referrals, err := s.repo.GetReferrals(ctx, req.UserId)
	if err != nil {
		return nil, status.Error(codes.Internal, err.Error())
	}

	protoReferrals := make([]*proto.User, len(referrals))
	for i, referral := range referrals {
		protoReferrals[i] = s.userToProto(referral)
	}

	log.Printf("‚úÖ L·∫•y %d referrals c·ªßa user %s", len(referrals), req.UserId)
	return &proto.GetReferralsResponse{Referrals: protoReferrals}, nil
}

// üéØ G·ª≠i welcome email b·∫•t ƒë·ªìng b·ªô
func (s *Service) sendWelcomeEmail(user *User) {
	defer utils.Recovery()

	if s.notificationClient == nil {
		log.Printf("‚ö†Ô∏è NotificationClient l√† nil, b·ªè qua g·ª≠i email")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	_, err := s.notificationClient.SendWelcomeEmail(ctx, &proto.NotificationRequest{
		UserId:  user.ID,
		Email:   user.Email,
		Type:    "welcome",
		Message: "Ch√†o m·ª´ng b·∫°n ƒë·∫øn v·ªõi h·ªá th·ªëng!",
	})

	if err != nil {
		log.Printf("‚ö†Ô∏è Kh√¥ng th·ªÉ g·ª≠i welcome email: %v", err)
	} else {
		log.Printf("‚úÖ ƒê√£ g·ª≠i welcome email cho: %s", user.Email)
	}
}

// ‚≠êÔ∏è‚≠êÔ∏è‚≠êÔ∏è H√ÄM HELPER QUAN TR·ªåNG NH·∫§T (ƒê√É S·ª¨A) ‚≠êÔ∏è‚≠êÔ∏è‚≠êÔ∏è
// Chuy·ªÉn ƒë·ªïi internal/user/model.go -> api/proto/user.pb.go
func (s *Service) userToProto(u *User) *proto.User {
	if u == nil {
		return nil
	}

	// Chuy·ªÉn ƒë·ªïi CreatedAt (time.Time) sang Proto (Timestamp)
	var createdAt *timestamppb.Timestamp
	if !u.CreatedAt.IsZero() {
		createdAt = timestamppb.New(u.CreatedAt)
	}

	// Chuy·ªÉn ƒë·ªïi ReferrerID (*string) sang (string)
	var referrerID string
	if u.ReferrerID != nil {
		referrerID = *u.ReferrerID
	}

	return &proto.User{
		Id:       u.ID,
		Email:    u.Email,
		FullName: u.FullName,
		// ‚≠êÔ∏è S·ª¨A: Th√™m Role v√†o
		Role:       u.Role,
		ReferrerId: referrerID,
		CreatedAt:  createdAt,
	}
}

// GetAdminMetrics - L·∫•y metrics cho admin dashboard
func (s *Service) GetAdminMetrics(ctx context.Context, req *proto.AdminMetricsRequest) (*proto.AdminMetricsResponse, error) {
	defer utils.Recovery()

	// (B·ªè qua ki·ªÉm tra quy·ªÅn admin ·ªü ƒë√¢y, v√¨ n√≥ n·∫±m ·ªü gRPC Interceptor)

	ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	defer cancel()

	// L·∫•y t·∫•t c·∫£ users ƒë·ªÉ t√≠nh to√°n metrics
	users, _, err := s.repo.List(ctx, 1, 10000) // L·∫•y t·ªëi ƒëa 10k users
	if err != nil {
		return nil, status.Error(codes.Internal, err.Error())
	}

	// T√≠nh to√°n metrics
	metrics := s.calculateUserMetrics(users, req.TimeRange)

	return &proto.AdminMetricsResponse{
		TotalUsers:    int32(metrics["total_users"].(int)),
		ActiveUsers:   int32(metrics["active_users"].(int)),
		NewUsersToday: int32(metrics["new_users_today"].(int)),
		ReferralCount: int32(metrics["users_with_referral"].(int)),
		GrowthRate:    float32(metrics["growth_rate"].(float64)),
		TimeRange:     req.TimeRange,
	}, nil
}

// BulkCreateUsers - T·∫°o nhi·ªÅu users c√πng l√∫c (cho admin)
func (s *Service) BulkCreateUsers(ctx context.Context, req *proto.BulkCreateRequest) (*proto.BulkCreateResponse, error) {
	defer utils.Recovery()

	if len(req.Users) == 0 {
		return &proto.BulkCreateResponse{Errors: []string{"No users provided"}}, nil
	}
	if len(req.Users) > 100 {
		return nil, status.Errorf(codes.InvalidArgument, "Maximum 100 users allowed per bulk request, got %d", len(req.Users))
	}

	var (
		wg           sync.WaitGroup
		successCount int32
		failureCount int32
		errors       []string
		sem          = make(chan struct{}, 10) // 10 goroutine ƒë·ªìng th·ªùi
		results      = make([]error, len(req.Users))
	)

	for i, userReq := range req.Users {
		wg.Add(1)
		go func(index int, u *proto.CreateUserRequest) {
			defer wg.Done()
			sem <- struct{}{}
			defer func() { <-sem }()

			if u.Email == "" || u.Password == "" {
				results[index] = fmt.Errorf("user %d: email/password required", index)
				return
			}

			user := &User{
				Email:     u.Email,
				Password:  u.Password,
				FullName:  u.FullName,
				CreatedAt: time.Now(),
				Role:      "user", // ‚≠êÔ∏è S·ª¨A: G√°n Role m·∫∑c ƒë·ªãnh
			}
			if u.ReferrerId != "" {
				user.ReferrerID = &u.ReferrerId
			}

			createCtx, cancel := context.WithTimeout(ctx, 5*time.Second)
			defer cancel()

			err := s.repo.Create(createCtx, user)
			results[index] = err

			if err == nil {
				s.userCache.Set(user.ID, user)
				go s.sendWelcomeEmail(user)
			}
		}(i, userReq)
	}

	wg.Wait()

	for i, err := range results {
		if err != nil {
			failureCount++
			if len(errors) < 50 {
				errors = append(errors, fmt.Sprintf("User %d (%s): %v", i, req.Users[i].Email, err))
			}
		} else {
			successCount++
		}
	}

	if failureCount > 0 && len(errors) == 50 {
		errors = append(errors, "...")
	}

	log.Printf("‚úÖ Bulk create completed: %d success, %d failed", successCount, failureCount)

	return &proto.BulkCreateResponse{
		SuccessCount: successCount,
		FailureCount: failureCount,
		Errors:       errors,
	}, nil
}

// ExportUsers - Streaming export users (cho admin)
func (s *Service) ExportUsers(req *proto.ListUsersRequest, stream proto.UserService_ExportUsersServer) error {
	defer utils.Recovery()

	ctx := stream.Context()

	// L·∫•y t·∫•t c·∫£ users (c√≥ th·ªÉ c·∫ßn pagination cho dataset l·ªõn)
	users, _, err := s.repo.List(ctx, 1, 10000)
	if err != nil {
		return status.Error(codes.Internal, err.Error())
	}

	// Stream t·ª´ng user
	for _, user := range users {
		select {
		case <-ctx.Done():
			return status.Error(codes.Canceled, "Export cancelled")
		default:
			protoUser := s.userToProto(user)
			if err := stream.Send(protoUser); err != nil {
				return status.Error(codes.Internal, err.Error())
			}
			// Small delay ƒë·ªÉ kh√¥ng overload
			time.Sleep(10 * time.Millisecond)
		}
	}

	log.Printf("‚úÖ Exported %d users via streaming", len(users))
	return nil
}

// calculateUserMetrics - T√≠nh to√°n c√°c metrics t·ª´ user data v·ªõi time range
func (s *Service) calculateUserMetrics(users []*User, timeRange string) map[string]interface{} {
	metrics := make(map[string]interface{})

	var (
		totalUsers        = len(users)
		activeUsers       = 0
		usersWithReferral = 0
		newUsersToday     = 0
		newUsersInRange   = 0
		previousUsers     = 0
	)

	now := time.Now()
	var startDate time.Time

	switch timeRange {
	case "today":
		startDate = time.Date(now.Year(), now.Month(), now.Day(), 0, 0, 0, 0, now.Location())
	case "week":
		startDate = now.AddDate(0, 0, -7)
	case "month":
		startDate = now.AddDate(0, -1, 0)
	case "year":
		startDate = now.AddDate(-1, 0, 0)
	default:
		startDate = now.AddDate(0, 0, -7) // default to week
	}

	// Date for growth rate calculation (previous period)
	previousStartDate := startDate.AddDate(0, 0, -7) // Simple example

	for _, user := range users {
		// Active users (created within 30 days)
		// ‚≠êÔ∏è S·ª¨A: Logic active user c·ªßa b·∫°n (d√πng CreatedAt) kh√°c v·ªõi repo (d√πng LastLoginAt)
		// Ch√∫ng ta s·∫Ω d√πng logic c·ªßa repo: GetActiveUsersCount
		// (H√†m n√†y hi·ªán t·∫°i ƒëang t√≠nh to√°n "th√¥", s·∫Ω ƒë∆∞·ª£c t·ªëi ∆∞u sau)
		if user.LastLoginAt != nil && user.LastLoginAt.After(now.AddDate(0, 0, -30)) {
			activeUsers++
		}

		// Users c√≥ referral
		if user.ReferrerID != nil && *user.ReferrerID != "" {
			usersWithReferral++
		}

		// New users today
		if user.CreatedAt.After(time.Date(now.Year(), now.Month(), now.Day(), 0, 0, 0, 0, now.Location())) {
			newUsersToday++
		}

		// New users in time range
		if user.CreatedAt.After(startDate) {
			newUsersInRange++
		}

		// Users in previous period for growth rate
		if user.CreatedAt.After(previousStartDate) && user.CreatedAt.Before(startDate) {
			previousUsers++
		}
	}

	// Calculate growth rate
	growthRate := 0.0
	if previousUsers > 0 {
		growthRate = (float64(newUsersInRange) - float64(previousUsers)) / float64(previousUsers) * 100
	} else if newUsersInRange > 0 {
		growthRate = 100.0 // Infinite growth from 0
	}

	metrics["total_users"] = totalUsers
	metrics["active_users"] = activeUsers // ‚≠êÔ∏è S·ª¨A: T·∫°m th·ªùi t√≠nh "th√¥" ·ªü ƒë√¢y
	metrics["users_with_referral"] = usersWithReferral
	metrics["new_users_today"] = newUsersToday
	metrics["new_users_in_range"] = newUsersInRange
	metrics["growth_rate"] = growthRate

	return metrics
}

// Helper method ƒë·ªÉ ki·ªÉm tra admin (gi·∫£ l·∫≠p)
func (s *Service) isAdmin(userID string) bool {
	// ‚≠êÔ∏è S·ª¨A: KH√îNG D√ôNG H√ÄM N√ÄY.
	// Logic admin ƒë∆∞·ª£c x·ª≠ l√Ω ·ªü gRPC Interceptor (trong main.go)
	// b·∫±ng c√°ch g·ªçi authService.GetUserRole()

	// Trong th·ª±c t·∫ø, s·∫Ω ki·ªÉm tra trong database ho·∫∑c JWT token
	// ·ªû ƒë√¢y gi·∫£ l·∫≠p admin user
	adminUsers := map[string]bool{
		"admin":   true,
		"user123": true,
	}
	return adminUsers[userID]
}
